--- a/gb/nf5287_10.md
+++ b/gb/nf5287_10.md
@@ -59,3 +59,33 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/31/n1404555.md#1" target="_blank">比利时电视台：中共被指控贩卖器官</a><br></h3>比利时法语国家电视台RTBF，在2006年7月13日晚间新闻中报道了法轮功学员被中共活摘器官牟利后遭屠杀的消息。电视还报道了当天中午加拿大前国会议员大卫- 乔高在布鲁塞尔举办的新闻发布会，欧洲议会副主席爱德华?麦克米兰-史考特 （Edward McMillan-Scott）和比利时人权律师乔治-亨利?布杰(Goerges-Henri Beauthier)到场.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年07月31日 4:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/29/n1402976.md#1" target="_blank">全球器官移植市场大买卖</a><br></h3>中国真的从法轮功学员的身上摘取器官吗？摘除后就立即杀害并焚化？前加拿大议会议员大卫-乔高(David Kilgour，音译)，和加拿大人权律师大卫-马提斯(David Matas)承认，他们不能证明中国有或没有为了摘取器官杀害成千个法轮功学员的事实，但是，他们害怕并且相信这是正在发生的事实。所以他们这个月写了一篇报告给“追查国际”(CIPFG)。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年07月29日 11:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/29/n1402758.md#1" target="_blank">世界器官移植协会关注活摘器官指控</a><br></h3>世界器官移植协会(The Transplant Society) 医疗事务主任德耳莫尼科医生( Francis L. Delmonico)表示该协会高度关注目前关于法轮功学员器官被中共活体摘除的指控, 并表示已将他们的关注转达到世界卫生组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年07月29日 5:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/31/n3835386.md#1" target="_blank">观电影《自由中国》 大陆学者现场退党</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/31/n3835386.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303301850412192-150x120.jpg" align ="left"></a>观看获奖电影《自由中国》 大陆访问学者现场退党......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月31日 6:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/30/n3834743.md#1" target="_blank">美国知名卫生法学教授：要亲阻中共活摘罪行</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/30/n3834743.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303291217312192-150x120.jpg" align ="left"></a>3月28日参加“世界移植之都”之称的美国匹兹堡市举行了一场“器官移植在中国被滥用”的专题研讨会。美国匹兹堡大学知名卫生法学（Health Law）教授Nathan Hershey参加研讨会后表示，中共活摘罪恶超越人类底线，他会身体力行，主动参与到阻止中共活摘器官的行动中来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月30日 7:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/28/n3833159.md#1" target="_blank">美肾脏专家：国际社会用行动制止中共活摘罪恶</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/28/n3833159.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303282103472003-150x120.jpg" align ="left"></a> 3月28日，美国华盛顿非营利组织医生反对强摘器官（DAFOH, Doctors Against Forced Organ Harvesting）在匹兹堡大学举办了一场主题为“移植在中国被滥用”的论坛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月29日 7:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/24/n3829872.md#1" target="_blank">中共活摘器官罪恶震惊世界移植之都医学专家们</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/24/n3829872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303221337532192-150x120.jpg" align ="left"></a>本周，三辆载着“阻中共活摘器官”巨幅看板车在世界最大器官移植中心所在城市--美国宾州匹兹堡市的主干道来回穿梭，与此同时，匹兹堡大学医疗中心（UPMC）外，市中心最繁华的街道口，“中共活摘器官”“数千法轮功学员器官被强摘器官致死”的横幅和展板，成为这座城市一道独特风景线，中共罪恶迅速在医学界和主流社会中发酵和传播。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月25日 2:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/21/n3828270.md#1" target="_blank">澳参议员反活摘器官动议案获参议院通过</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/21/n3828270.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303210931172366-150x120.jpg" align ="left"></a>（大纪元记者索尼亚/何蔚澳洲悉尼报导）澳洲联邦参议员约翰?马迪根（John Madigan）于3月21日向参议院提交了一份动议案， 就联合国和欧洲理事会提议的一项防止贩卖器官，组织和细胞，打击贩卖被摘除的人体器官的国际协议，要求澳洲政府支持联合国和欧理会的倡议并反对活体摘取器官的行为。该动议案在参议院获得一致通过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月21日 9:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/20/n3827039.md#1" target="_blank">澳洲参议员：“真、善、忍”国际美展很美</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/20/n3827039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303200226212126-150x120.jpg" align ="left"></a>（大纪元记者袁丽澳洲坎培拉报导）已经在全球40多个国家、2百多个城市做过上千次展出的“真、善、忍”国际美展再次来到澳洲。3月14日，第一次在澳洲首都堪培拉的国会大厦内举行，这也是主要为那些在国会中工作的国会参议员、联邦议员及其工作人员举办的展览。美展中的画作带给人们以净化心灵的冲击，其高超的绘画技巧和法轮功修炼者的故事都让人们感受到深深的启迪。澳洲国会参议员.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月20日 2:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/19/n3826499.md#1" target="_blank">专访大卫 ?乔高：尊重人民意愿 立即停止迫害</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/19/n3826499.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303190936022126-150x120.jpg" align ="left"></a>（大纪元记者袁丽澳洲坎培拉报导）3月14日，在澳洲首都的国会大厦内，“真、善、忍”国际美展在国会大厦首次展出。正在澳洲访问的前加拿大资深国会议员、人权活动家大卫 ?乔高（David Kilgour）来到画展，并与澳洲的部分参议员、联邦议员见面。“真、善、忍”国际美展中的几十幅作品讲述了修炼法轮功后修炼者身心巨变的故事，以及他们在中国被迫害的事实。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月20日 9:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/18/n3825309.md#1" target="_blank">专访悉尼大学Singh教授 国家掠夺器官与澳洲立法</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/18/n3825309.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303180526272126-150x120.jpg" align ="left"></a>（大纪元记者袁丽澳洲悉尼报导）自“中共活摘器官”罪行的不断曝光，对于非法器官移植与贩卖在国际上的影响，以及制止活摘器官罪行也越来越被人们关注，3月12日晚，在澳洲纽省议会大厦，由绿党议员大卫?舒布瑞杰（David Shoebridge）主办的“终结人体器官在中国的掠夺”研讨会上，请来了《国家掠夺器官》一书的作者之一悉尼大学Maria Fiatarone Si.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月18日 2:33 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/1/n3812312.md#1" target="_blank">澳洲绿党议员推重刑惩罚非法器官贸易</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/1/n3812312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303010938582366-150x120.jpg" align ="left"></a>2月19日，澳洲纽省绿党司法事务发言人胥布瑞吉（David Shoebridge）就现有的纽省《人体组织法 1983》，向省议会提交了法案的修订草案。草案将未经被害人允许而使用其器官组织的行为定为一项新的罪行，并规定，当被非法获得的器官为人体重要器官时，罪行加重，等同于过失杀人罪（最高刑期可达25年）。胥布瑞吉表示，此举是为健全法律，杜绝非法器官贸易。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月02日 9:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/1/n3811503.md#1" target="_blank">丹麦国会举行“共产中国司法状况”答辩会</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/1/n3811503.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1302281441452133-150x120.jpg" align ="left"></a>（大纪元记者林达丹麦哥本哈根报告）2013年2月22日，丹麦国会召开题为“共产中国司法状况”答辩会。丹麦外交大臣及八个党派的外交政策事务发言人参加了答辩会，并就此一议题发表各自见解。2月26日，丹麦100多位国会议员就此会议提案进行表决。以87票支持，22票反对的压倒多数，通过了要求丹麦政府在与中共交往时，敦促中共政权改善人权现状的提议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月01日 2:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/2/19/n3804198.md#1" target="_blank">澳洲纽省将立法禁止接受“非法器官移植”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/2/19/n3804198.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/02/1302190543402366-150x120.jpg" align ="left"></a>（大纪元记者何蔚悉尼报导）澳洲纽省绿党向省议会提出一项针对国际活体摘除和倒卖器官问题的修定法案。该修订草案案提出明令禁止澳洲纽省公民与居民从任何国家或渠道接收被活体摘除并转卖的器官。并提出将对通过非法或不道德手段获取器官的澳大利亚公民和居民予以定罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年02月19日 8:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/2/7/n3796282.md#1" target="_blank">揭露中共活摘器官黑幕 加拿大国会举办听证</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/2/7/n3796282.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/02/1302070908212052-150x120.jpg" align ="left"></a>（大纪元渥太华记者站综合报导）隶属于加拿大国会外交委员会的国际人权委员会二月五日，在渥太华国会大厦进行了关于中共活体摘取法轮功学员器官的听证会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年02月07日 11:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/1/31/n3790372.md#1" target="_blank">欧议员和学者谈中共对信仰团体的残酷迫害</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/1/31/n3790372.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/01/1301310610562133-150x120.jpg" align ="left"></a>（大纪元记者林文萱比利时布鲁塞尔采访报导）中国人权问题一直是西方社会对中共高调谴责，却关门洽谈的问题。一方面是需要遵循的民主和人权价值，另一方面是诱人的庞大市场，在你来我往的贸易和人权对话中，西方社会和中共当局渐渐达成了默契：面对外界，西方可以厉声谴责，中方则严正抗议。关起门来，贸易往来之余，你可以谴责六四屠杀，你也可以为藏人的信仰和文化自由呼吁。然而有一个.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年01月31日 6:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/1/30/n3789474.md#1" target="_blank">欧议会举办中共信仰迫害听证会 直指活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/1/30/n3789474.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/01/1301300651322133-150x120.jpg" align ="left"></a>“我没说这位年轻人在撒谎，我只是说我没法相信自己的耳朵。这是有区别的。”1942年，在聆听了一位亲身经历过华沙死亡集中营的年轻波兰人的证词后，一位谨慎的美国最高法院法官费利克斯对媒体这样说。那段沉痛的经历给欧洲人留下了一句至今仍难以磨灭的话：“Never Again!（永不再发生）”然而七十年后的今天，人们不得不看到历史以更加残酷的方式重演。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年01月30日 10:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/29/n3763974.md#1" target="_blank">制止中共活摘器官   白宫网站逾2.5万人签名</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/29/n3763974.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1212282320161160-150x120.jpg" align ="left"></a>（大纪元记者董韵报导）由美国纽约大学医学院教授、国际医学伦理研究权威卡普兰（Arthur Caplan）博士等3位医生本月初在美国白宫网站上共同发起的一项签名连署活动，截至12月28日下午，有2万5千多人签名支持。该签名活动呼吁奥巴马总统及美国政府，调查目前正发生在中国大陆大量法轮功学员被活摘器官事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月29日 5:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/21/n3758508.md#1" target="_blank">制止中共活摘器官 台湾不缺席</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/21/n3758508.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1211290740051758-150x120.jpg" align ="left"></a> （新纪元周刊305期，记者赵芷菱报导）在多国发出反对活摘器官的声浪下，台湾也掀起了反对中共活摘器官的医界连署活动。台湾国际器官移植关怀协会于10月下旬发起台湾医界反对中共活摘器官，短短一个半月，就获得医界广泛支持，计有医生2626人、医护人员2257人签署支持。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月21日 7:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/18/n3755986.md#1" target="_blank">医生反对强摘协会发言人: 共同制止这种暴行！</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/18/n3755986.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1212181732562498-150x120.jpg" align ="left"></a>两个月前，由医生反对强摘器官协会（简称DAFOH）在欧洲发起的， 针对中共活摘法轮功学员器官的指控，请求联合国调查请愿信在一个半月的时间内，已经征集了16多万包括欧洲各国议员，市长的签名。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月19日 5:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/11/7/n3723661.md#1" target="_blank">美前总统克林顿向法轮功学员致意：抱歉 你们受苦了</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/11/7/n3723661.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/11/1212101615232192-150x120.jpg" align ="left"></a>11月3日晚上，美国前总统克林顿前往华盛顿DC地区维吉尼亚的Bristol，为民主党总统候选人奥巴马助选。克林顿在现场听到法轮功真相，并对曾在中国受到迫害的两位华府法轮功学员说：我感到抱歉，你们受苦了！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月13日 3:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/10/n3749168.md#1" target="_blank">加前司法部长：活摘器官是严肃、可信的指控</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/10/n3749168.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1212100115352052-150x120.jpg" align ="left"></a>（大纪元渥太华记者站报导）加拿大前任司法部长、资深国会议员、国会法轮功之友副主席欧文?考特勒（Irwin Cotler）12月4日接受采访时表示，中共活体摘取法轮功学员器官的指控是严肃、可信的。他建议在加拿大召开人权听证会，揭露发生在中国的这一罪行，并让中共对此负责。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月10日 2:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/9/n3748405.md#1" target="_blank">昆省反“活摘器官”游行 揭发中共罪行</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/9/n3748405.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1212082203461999-150x120.jpg" align ="left"></a>(大纪元记者林珊如澳洲布里斯本报导) 国际人权日到来之际，全世界各地为制止中共 “活摘器官”罪行而大力奔波，澳洲昆士兰法轮功学员也于12月8日上午11时30分，在布里斯本市中心举行游行活动。昆士兰西藏团体并参加游行，以实际行动制止中共罪行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月09日 10:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/8/n3748263.md#1" target="_blank">马丁?路德?金之子签名   吁美公开谴责中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/8/n3748263.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1212081039032192-150x120.jpg" align ="left"></a>马丁?路德?金之子签名   呼吁美国公开谴责中国活摘器官......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月08日 11:12 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/31/n3835399.md#1" target="_blank">旅美华裔学者：抛弃对中共幻想</a><br></h3>2013年3月29日下午，美国匹兹堡著名的卡内基梅隆大学举行了纪录片《自由中国》的专场放映及现场讨论会，进一步向世人揭露中共对法轮功学员灭绝人性的残酷迫害。这部荣获多项国际大奖的电影纪录片讲述了两位法轮功学员因坚守信仰，在中共劳教所里遭受迫害的亲身经历。前来观看这部影片的有匹兹堡大学不同族裔的学生和在校员工，以及几位来自其它大学和机构的人士。应邀出席放映讨论.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月31日 7:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/30/n3835234.md#1" target="_blank">“器官移植在中国被滥用”研讨会 揭中共残暴</a><br></h3>（明慧记者郑海山综合报导）二零一二年三月二十八日，以“器官移植在中国被滥用”为主题的研讨会在美国匹兹堡大学举行。研讨会室内座无虚席，不少来晚的观众找不到座位，站着听讲。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月30日 9:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/25/n3830583.md#1" target="_blank">德国《时代周刊》揭露中共活摘器官</a><br></h3>（明慧记者雪莉编译报导）二零一三年三月七日，德国《时代周刊》在显着版面上大篇幅揭露有关中共活体摘取法轮功学员器官卖给西方患者牟利的事实。这篇文章马上引起读者的关注，其影响在德国社会持续蔓延。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月25日 8:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/10/n3819055.md#1" target="_blank">311将至 德法万人游行反核</a><br></h3>日本311震灾即将届满两周年，法国和德国各地共计有近5万民众今天发起反核示威游行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月10日 12:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/2/26/n3809687.md#1" target="_blank">《国家掠夺器官》作者在台呼吁习近平做出改变</a><br></h3>（大纪元记者金睛报导）日前，台湾医界与卫生署邀请《国家掠夺器官》一书的作者群来台演讲，举办国际研讨会。呼吁全球动起来，共同制止中共的活摘罪行，同时向中共党魁习近平喊话，希望习近平对此做出改变。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年02月26日 7:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/1/9/n3772034.md#1" target="_blank">大连一派出所所长退党并举报公安恶人</a><br></h3>（大纪元记者姚真熙报导）现在海外越来越多的退党义工向大陆民众打真相退党电话。据反馈，接听电话的人也有了越来越大的变化，包括那些迫害法轮功学员严重地区的政法委系统内人员和上了恶人榜的警察。骂人、挂电话的少了，沉默听真相的多了。先静声听，后表态退，最后还问他们该做什么。有评论指出，中共连其暴力机器内部的官员都愿意“三退”，中共解体的日子也就快了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年01月10日 7:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/9/n3748552.md#1" target="_blank">秋尚：中国器官移植已进入“拎着器官找患者”阶段</a><br></h3>编者按：2012年第21届联合国人权理事会在日内瓦联合国万国宫召开，由全球最大中文独立媒体大纪元持续6年坚持曝光的中共独裁政权活摘法轮功信仰者器官的反人类罪，首次在大会上被揭露，世界为之震惊。虽然中共一直动用所有掌控的媒体极力掩盖这一滔天大罪，但终究掩盖不了事实真相。本文采用的资料均为中国大陆官方网站自行披露。读者可从其自行曝光的资料中印证大纪元所言无误。本.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月09日 2:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/5/n3745487.md#1" target="_blank">【周晓辉】医学伦理权威下重锤 奥巴马政府如何回应？</a><br></h3>12月2日，美国著名医学专家、国际医学伦理研究权威、纽约大学医学院教授阿瑟?卡普兰（Arthur Caplan）博士和其他两名医生，在美国白宫请愿网的网页中发起了一个公开征集签名的活动，活动旨在要求奥巴马政府调查并公开谴责中共活摘法轮功学员和其它囚犯器官的罪行。在发起签名的同时，卡普兰博士等人还在签名网站发表了一封简短的公开信，信中指出：“活摘器官是反人类的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月05日 1:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/12/12/4/n3744312.md#1" target="_blank">医学界权威白宫网站征签 促奥巴马公开谴责中共活摘</a><br></h3>世界医学界权威、美国纽约大学医学院教授阿瑟?卡普兰（Arthur Caplan）博士12月1日在美国白宫网页发起了一个“我们-人民”的公开签名倡议活动，要求奥巴马政府调查并公开谴责中共活摘法轮功学员和其它囚犯器官的罪行。根据白宫网站的要求，30天内签名达到2万5千人，白宫必须对这一诉求进行官方正式答复。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2012年12月04日 1:09 AM							</td></tr>
