--- a/gb/nf5287_6.md
+++ b/gb/nf5287_6.md
@@ -111,3 +111,33 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/11/11/n4571345.md#1" target="_blank">台海洋大学举办制止活摘器官作品展</a><br></h3>鉴于中国大陆活体摘取器官牟利事件，国际上已传闻多年也引发各国谴责声浪，在台湾却没有得到应有的重视，“台湾国际器官移植关怀协会”特在国立海洋大学举办“制止在中国的活摘器官”图文作品展及《活摘》纪录片特映会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年11月11日 8:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/11/2/n4563700.md#1" target="_blank">澳洲联邦议员签名制止中共活摘器官暴行</a><br></h3>二零一五年十月三十一日，西澳南部城市奎纳纳（City of Kwinana）举行一年一度的庆祝活动（Kwinana Festival Fair Day and Concert），珀斯部分法轮功学员应邀参加活动并展示法轮功功法和举行讲真相活动。参加活动的当地选区的联邦国会议员 Gary Gray 鼓励法轮功学员们持之以恒讲清真相，并签名支持制止中共活摘器官暴行.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年11月02日 12:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/9/28/n4537569.md#1" target="_blank">美媒：习访美 法轮功吁中共停止活摘器官罪行</a><br></h3>在习近平访美与联合国召开年度峰会之际，中共的侵权行为也吸引了人们的关注。日前《太阳前哨报》刊登了一名佛罗里达州法轮功学员的诉求信，呼吁美国人帮助阻止中共人权侵犯，尤其是立即制止中共活摘法轮功学员器官的罪行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年09月28日 12:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/12/n1284729.md#1" target="_blank">医生录音:5.1前大量鲜活供体 加班移植</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/12/n1284729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/60412181512459-150x120.jpg" align ="left"></a>(希望之声记者唐梅采访报导)明慧网4月6日发出紧急通告，摘要中说明：苏家屯等地下集中营人证已被秘密转移，并随时遭到屠杀。一些大陆医院突然开始大批赶做器官移植手术，以销毁集中营人证为目地的大屠杀正在发生。记者打电话到各大医院移植中心了解情况，医生大都表示，到四月底以前会有大量供体，过了这个时间机会就少了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月13日 1:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/13/n1285857.md#1" target="_blank">唐山市劳教所盗取法轮功学员器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/13/n1285857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604121946581667-120x120.jpg" align ="left"></a>（大纪元记者文华综合报道）近日记者从一篇大陆官方报道中找到大连器官移植中心，活体肝脏移植的供体来自于河北唐山。以此为线索，发现数位惨死于唐山荷花坑劳教所的法轮功学员，他们的器官都被劳教所盗取了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月13日 8:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/12/n1285086.md#1" target="_blank">牢头曝大庆活体盗法轮功学员器官黑幕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/12/n1285086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/60412025214789-150x120.jpg" align ="left"></a>以下信息，来自日前中国大陆一位没有透露姓名的投稿者给明慧网的一封信。这位据推测为大庆法轮功学员的投稿者在信中写道：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月12日 3:50 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/11/n1283230.md#1" target="_blank">纽约客想知道：失踪弟弟也在尸展中吗</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/11/n1283230.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/503060110628-150x120.jpg" align ="left"></a>每当黄万青走在纽约市的街上，看到人体展览的海报，就会想知道有关他弟弟黄雄的事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月11日 2:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/10/n1282708.md#1" target="_blank">巴黎民众吁查中国劳教所盗器官黑幕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/10/n1282708.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604100300521527-150x120.jpg" align ="left"></a>4月8日下午3点，法国法轮功学员在法国巴黎人权广场，揭露中国劳教所活体摘取法轮功学员器官后毁尸灭迹的残暴兽行，强烈抗议中共对法轮功学员长达六年多的灭绝人性的残酷镇压、虐杀的野蛮行径。呼吁法国政府、媒体和民众给予高度关注，尽快制止中共的虐杀和妄图掩盖真相的一切罪恶行径，紧急营救正在劳教所遭受迫害的法轮功学员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月10日 4:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/6/n1279107.md#1" target="_blank">为什么沈阳移植中心的中文网页被删除</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/6/n1279107.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604060615531123-150x120.jpg" align ="left"></a>种种迹象表明沈阳苏家屯惨案和设在沈阳的中国国际移植网络支援中心有着直接的密切联系，近日从互连网备份中找到了该中心2003年使用的网页以及后来2005年更新后又在苏家屯惨案被揭露后迅速删除的中文网页（新旧网站备份连接见文章结尾附录），从这一招揽生意的国际窗口看进去，可以真切的感受到当时以沈阳移植中心为纽带的巨大的活体器官交易市场的喧嚣气氛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月08日 5:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/8/n1280515.md#1" target="_blank">盗法轮功学员器官黑幕一直在劳教所</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/8/n1280515.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/60407193830789-150x120.jpg" align ="left"></a>苏家屯活体摘除法轮功学员器官的罪恶曝光后，苏家屯地下集中营人证已被全部秘密转移，近来苏家屯地区有大量从海外赶来调查器官摘除事件的记者和一些没有暴露调查身份的相关人员，中共安全部已安排大量便衣冒充小贩、行人和三轮车车伕等在沈阳苏家屯血栓医院附近和苏家屯火车站等地活动，欺骗调查者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月08日 3:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/7/n1279790.md#1" target="_blank">举证人人有责 人体器官展难逃嫌疑</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/7/n1279790.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604062319181627-150x120.jpg" align ="left"></a>沈阳苏家屯集中营虐杀大量法轮功学员﹐活体器官摘除并秘密焚尸的惊天暴行被海外大纪元时报揭露出来后﹐前后分别有两位证人出面指证﹐引起广大民众及团体的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月07日 12:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/6/n1278494.md#1" target="_blank">沈阳器官移植中心“活体器官广告”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/6/n1278494.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/60405194836789-150x120.jpg" align ="left"></a>沈阳苏家屯摘取法轮功学员活体器官血案曝光后，在沈阳地区有没有一个地下活体器官交易市场，成为人们关注的焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月06日 8:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/6/n1278480.md#1" target="_blank">大纪元：不能在等待中让罪恶加剧</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/6/n1278480.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/60405192149789-150x120.jpg" align ="left"></a>大规模的群体虐杀在第二次世界大战时发生过。德国纳粹在迫害犹太人时，把犹太人的老老少少作为人体工厂。在当时，西方社会，包括美国都没有重视起来，罪恶拖了2、3年，说是在等证据。可就在等证据的这段时间，又多了250万犹太人被杀害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月06日 8:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/5/n1278087.md#1" target="_blank">法轮大法学会成立调查苏家屯真相委员会</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/5/n1278087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604010102201528-150x120.jpg" align ="left"></a>明慧网4月5日公告，将发起赴中国大陆调查苏家屯集中营及法轮功受迫害真相联合委员会，正式寻求国际独立、直接、不受干预的团体协助调查秘密关押法轮功学员的辽宁沈阳市苏家屯及类似的集中营真相，尽早让迫害真相水落石出，结束这场持续了近七年的残酷迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月05日 8:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/5/n1277265.md#1" target="_blank">医学专家：苏家屯有大型活体器官库</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/5/n1277265.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604041332501627-150x120.jpg" align ="left"></a>(大纪元记者余心、南希美国华府报导) 沈阳苏家屯集中营虐杀大量法轮功学员﹐活体器官摘除并秘密焚尸的惊天暴行被海外大纪元时报揭露出来后﹐前后分别有两位证人出面指证﹐引起广大民众及团体的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月05日 2:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/4/n1276689.md#1" target="_blank">葛特曼：你会记住这个名字“苏家屯”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/4/n1276689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604040255531462-150x120.jpg" align ="left"></a>四月二日下午，《失去新中国》一书作者葛特曼（Ethan Gutmann）和中国时事评论家横河在温哥华西门菲沙大学，在与“新中国”做生意研讨会上发表讲演并回答与会者问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月04日 3:09 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/12/n1285149.md#1" target="_blank">赴中国大陆全面调查法轮功受迫害真相委员会关于第一批追查取证对像名单的公告</a><br></h3>赴中国大陆全面调查法轮功受迫害真相委员会”(以下简称“调查真相委员会”)于2006年4月7日发出“关于‘调查真相委员会 ’调查取证范围的通知”。根据该“通知”公布的调查取证范围，所有非法关押迫害法轮功学员的劳教所、监狱、医院和相关设施都是追查取证对象。现根据明慧网 收集到的法轮功学员受迫害资料，整理公布第一批追查取证对像名单如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月12日 4:50 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/12/n1284941.md#1" target="_blank">怀明：安徽六安裕安区政府大院地下发现大量尸骨</a><br></h3>可是此报导有几处令人不解的地方。首先，虽然记者妙笔生花将骨头描述的很老，为什么没有配一张展示骨头的照片呢？（本文发表后或许有人会赶紧补照片登载，只是时过境迁后的照片来源就难说了。）就凭记者一句话就可以下结论说尸骨很老了吗？也许真正的法医鉴定会揭开事实真相，但在今天的中国的法医鉴定更有可能会符合记者的口径。然而，文章中无意暴露出的一些细节毕竟引起了我对尸骨的新.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月12日 12:57 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/12/n1284418.md#1" target="_blank">【世事关心】中共盗取法轮功学员器官内幕（2）</a><br></h3>主持人：到今天为止，苏家屯集中营黑幕曝光已经有４个星期了。在这四个星期中，事情的发展出现了戏剧性的起伏。首先２位证人在８天之内分别出来作证，揭露苏家屯集中营活体摘除法轮功学员的器官，然后在把他们的身体焚烧掉。其中一名证人的前夫曾经直接从事器官摘除手术。事情曝光后，中共方面整整沉默了３个星期，３个星期以后，中共外交部发言人首次公开在一个记者会上对此事进行否认.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月12日 12:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/11/n1284271.md#1" target="_blank">漫画：中共苏家屯焚尸炉</a><br></h3>......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月11日 9:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/11/n1283755.md#1" target="_blank">残忍的活体取肾早有先例</a><br></h3>在赣州市为李九莲鸣不平的无数人中，有一个小学教师，叫钟海源。她真正做到了为李九莲两肋插刀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月11日 2:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/11/n1283496.md#1" target="_blank">知底人揭秘：中共几十年的人体器官盗用</a><br></h3>......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月11日 9:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/9/n1282005.md#1" target="_blank">漫画：中共苏家屯器官工厂</a><br></h3>......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月09日 10:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/9/n1281418.md#1" target="_blank">吴葆璋：毫不怀疑苏家屯事件的真实性</a><br></h3>在沈阳苏家屯存在地下集中营之事被曝光后，多国媒体和民众严厉谴责中共邪恶暴政。另一方面，有人对于该事件的真实性提出质疑。记者日前采访了法国国际广播电台前中文部主任、资深媒体人吴葆璋先生。吴葆璋表示，有些质疑很可能是有意制造的舆论攻势，并指出，在中共的社会以后再出现类似苏家屯事件都不吃惊，更不会怀疑其真实性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月09日 5:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/9/n1281251.md#1" target="_blank">“我在你们的沉默中死去”</a><br></h3>......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月09日 1:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/9/n1281249.md#1" target="_blank">天雷</a><br></h3>看似漆白的瓷砖，仿佛污血浊浊；看似蔚蓝的天空，感觉昏暗阴冷……站在“苏家屯集中营”的后院，我怎能想像在自己的脚下的阴暗角落里，那邪恶的政权曾经秘密关押了众达六千多的“法轮功”同胞；更无法想像其中四千多“法轮功”同胞被中共的“大夫”在这里“挖心掏肝，进行活体解剖后焚尸灭迹；并大肆非法售卖死者器官……”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月09日 1:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/8/n1280935.md#1" target="_blank">赴大陆集中营调查委员会取证范围通知</a><br></h3>法轮大法学会和明慧网于2006年4月4日发起成立“赴中国大陆调查苏家屯集中营及法轮功受迫害真相联合委员会”(以下简称“调查真相委员会”)。关于“调查真相委员会”调查取证的范围，明慧网于4月7日通知如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月08日 2:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/6/n1278897.md#1" target="_blank">剧本：活体罪恶 (下)</a><br></h3>熊医生拿着同样式样的刀在发抖着划另一个肚皮。护士在给他擦汗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月06日 3:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/6/n1278872.md#1" target="_blank">剧本：活体罪恶 (上)</a><br></h3>一个普通的农村女大法弟子王真去北京上访，被关进了苏家屯集中营，同伴小容被活体盗取器官给一名外商移植而被活活杀死焚尸，医院的医生熊明参与了此事，过程中受到很大刺激，但是黑心的院长用钱利诱，熊明继续做恶，他的精神状态持续恶化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月06日 3:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/5/n1277375.md#1" target="_blank">江泽民：让关进去的人不可能再出来</a><br></h3>（大纪元记者白渺综合报道）一法轮功修炼者提供线索，称其在出监狱前，一位狱警指着监狱内那栋正建的楼房，悄悄对说：“那是专门给法轮功盖的，那里面的设施……，你可千万别再叫弄到这里来了啊！”她同时提供线索，在她被关押在山西省女子监狱之前，曾听到一个在山西省公安厅工作的一个朋友说：“江泽民叫在新疆、甘肃、内蒙、四川等五省区选荒无人烟的地方建几所专门关押法轮功的大型监.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月05日 8:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/4/n1276573.md#1" target="_blank">林泉：关于“人体革命化处理 作为食物”的理解</a><br></h3>要想挖出劳改农场的这些秘密可能很难，因为吃蛔虫，吃人都不是什么光彩的事，想起来头皮都发麻，巴不得永远忘记。更何况，监狱和劳改农场里无法无天的事情太多，每一个能活着被释放的人，被释放的第一个条件就是被威胁，要保证永远不向外界透露自己在监狱和劳改农场的苦难经历，否则随时可以被抓回来。他们虽然重新回到了社会，却永远被捏在党的手里。何况经历过那样苦难的人，决不会愿意.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月04日 12:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/4/n1276489.md#1" target="_blank">请关注苏家屯近期施工情况</a><br></h3>中共在苏家屯时间上的拖延是为了转移人员和销毁证据，但有些不是那么容易销毁的，其中之一是焚尸炉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月04日 11:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/4/n1276487.md#1" target="_blank">电话如何影响医院正常运作：回卫视凤凰台</a><br></h3>3月20日周四，跟中共官方有密切关系的凤凰卫视在晚间咨询台的《华闻大直播》中，播出了题为“法轮功所说的秘密集中营并不存在”的新闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月04日 11:29 AM							</td></tr>
