--- a/gb/nf5287_7.md
+++ b/gb/nf5287_7.md
@@ -61,3 +61,63 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/22/n2762782.md#1" target="_blank">唐彦：台湾要顾里子也要顾面子</a><br></h3>近一年多来两岸的交流日趋频繁，表面上看，好似欣欣向荣，却也暗藏危机。“台湾病人到中国移植器官牵涉违法买卖问题”、“迫害法轮功的中共高干徐光春来台被告事件”就这两个议题，最可能动摇台湾民心与经济的“里子”和台湾在国际上的人权形象的“面子”问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年12月22日 7:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/18/n2758791.md#1" target="_blank">目击者披露活摘法轮功学员心脏惨案(3)</a><br></h3>所以在这个证明当中我们要知道，就是铁证如山，也有人照样要否定。第二次世界大战结束这么久了，现在还有人否认曾经发生过对犹太人的屠杀，所以这个事情并不奇怪。但是关键问题是，就这么多证据摆在这里的话，中共官方是有义务进行回应的，而他们没有进行回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年12月18日 5:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/14/n2753824.md#1" target="_blank">热点互动直播预告：目击者披露活摘法轮功学员心脏惨案</a><br></h3>在周二的一个小时节目里，主持人元庆邀请追查迫害法轮功国际组织负责人汪志远先生与资深评论员横河先生，和您一起来探讨这个话题。希望您打热线电话加入纽约曼哈顿的直播现场，踊跃表达您的宝贵意见或是提问、参与讨论。时间：美东周二(12月16日)晚9:00至10:00点，北京周三(12月17日)早10点至11点北美热线电话：(646)519-2879中国免费电话：(40.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年12月14日 12:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/8/30/n4516230.md#1" target="_blank">《前所未有的邪恶迫害》     医师：中共只有“邪恶”能形容</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/8/30/n4516230.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/08/1508300911002238-150x120.jpg" align ="left"></a>中共“活摘器官”暴行，2006年在海外被揭发，世人震惊之余，却发现暴行迟至今日并未停止。为探究其根本原因，19位国际知名学者专家共同发表《前所未有的邪恶迫害》一书，8月29日巡回至台中中兴大学举办第四场新书座谈会，揭露最核心的事实：“对法轮功的迫害一天不停止，中共的暴行也不会结束，因为法轮功学员已成为中共器官的最大供应库。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年08月30日 9:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/30/n4491970.md#1" target="_blank">《你为什么要这么做？》调查活摘律师出书述心路</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/30/n4491970.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/1507292234481949-150x120.jpg" align ="left"></a>因为参与调查在中国发生的强摘活人器官事件而获得2010年诺贝尔和平奖提名的著名人权律师麦塔斯(David Matas)通过写自传来讲述其心路历程。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年07月31日 1:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/25/n4488461.md#1" target="_blank">中共活摘器官 知情人曝光惊人内幕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/25/n4488461.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/1507242253312269-150x120.jpg" align ="left"></a>首先来关注有关中共活摘法轮功学员器官的最新消息，旅居丹麦的异议人士杨光，在得知法轮功学员被活摘器官的消息后，通过人脉多方打探，结果他的两位生死之交向他透露了惊人内幕：仅公安部掌握的资料，就显示有超过50万名法轮功学员被活摘致死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年07月25日 10:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/22/n4486565.md#1" target="_blank">媒体报导 澳纽省小镇居民签名呼吁制止活摘</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/22/n4486565.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/1507221019362366-150x120.jpg" align ="left"></a>最近，纽省北海岸戈斯福德（Gosford）地区的两家报纸分别以“反活摘器官请愿寻求签名” ( Signatures sought for anti-live organ harvesting petition)和“停止活摘器官”（End Organ Harvesting）为标题，在7月15日和7月22日报导了当地居民吴莉莎的母亲，一个法轮功修炼者在中国受到迫.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年07月22日 9:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/5/n4473108.md#1" target="_blank">国际人权律师南澳公众论坛演讲</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/5/n4473108.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/1507041210542490-150x120.jpg" align ="left"></a>继今年4月澳洲SBS电视台播出纪录片《活摘：非法的中国人体器官贩卖》（Human Harvest: China’s Organ Trafficking）在澳洲各界引起极大反响后，澳洲各地陆续举办针对性的研讨会和论坛。本周在南澳大学举行的一场有关中共活摘器官及中国局势洞察解析的学术论坛吸引了本地一批关注中国问题与局势的人士参与。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年07月04日 11:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/2/n4470744.md#1" target="_blank">澳洲电台专访麦塔斯 揭中共活摘器官罪恶</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/2/n4470744.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/1302270947311770-150x120.jpg" align ="left"></a>二零一五年六月二十九日上午十时，加拿大著名国际人权律师、加拿大勋章获得者、曾获诺贝尔和平奖提名的大卫．麦塔斯先生（David Matas），在其澳纽学术访问的第一站——南澳首府阿德莱德，接受了当地国有媒体澳洲广播公司（ABC）阿德莱德电台891ABC Adelaide的专访，该台的直播节目可同时从收音机、手机以及互联网收听。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年07月02日 4:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/1/n4470520.md#1" target="_blank">制止中共活摘器官 罗马尼亚民众积极支持</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/1/n4470520.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/1507010835212192-150x120.jpg" align ="left"></a>二零一五年六月二十八日，罗马尼亚部分法轮功学员在首都布加勒斯特市中心Cismigiu公园举行讲述法轮功真相活动。当天，有三百多位民众和游客在向联合国人权事务高级专员提交的“医生反对强制摘取器官”组织(DAFOH)的请愿书上签名，要求制止中共活摘法轮功学员器官和迫害法轮功的行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年07月01日 8:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/30/n4469069.md#1" target="_blank">中国护士国际会议举报中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/30/n4469069.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506292221541873-150x120.jpg" align ="left"></a>日前在韩国首尔举行的“2015国际护士大会”上，多个国家的医护人员现场举报了28个中共活摘器官的事例，特别是有两名与会的中国护士匿名举报说，中共这种强摘器官都是事实，而且在秘密进行，他们就是曾经的参与者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年06月30日 7:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/20/n4461791.md#1" target="_blank">美国会发起343号决议案 制止中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/20/n4461791.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1306271929192192-150x120.jpg" align ="left"></a>6月25日（周四），美国两党国会议员在众议院共同发起343号决议案，要求中共立即停止针对法轮功学员和其他良心犯的“强摘器官”行为；要求对中共器官移植系统进行可信、透明和独立的调查；并要求中共立即停止对法轮功发起的已持续16年的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年06月26日 8:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/24/n4464506.md#1" target="_blank">反强摘器官组织日内瓦万国宫举行研讨会</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/24/n4464506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1312141209452003-150x120.jpg" align ="left"></a>国际医疗道德提倡组织“医生反对强摘器官”（DAFOH）本周三（6月24日）将在日内瓦联合国总部万国宫（Palace of Nations）举行研讨会，对中共所谓终止强摘囚犯器官的声称进行审查。DAFOH将召集国际有关当局共商大举，并呼吁联合国对中共强摘人体器官的恶劣行径采取行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年06月24日 11:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/24/n4464285.md#1" target="_blank">大陆反中共活摘器官签名人数破五万</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/24/n4464285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506231642252192-150x120.jpg" align ="left"></a>法轮大法明慧网6月23日消息，大陆河北省保定、秦皇岛、张家口等市近日新增5038人签名反对活摘器官。截至目前，大陆反活摘器官的签名人数已逾五万人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年06月24日 7:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/2/n4447991.md#1" target="_blank">震撼美国电视圈  《活摘》拿下皮博迪奖</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/2/n4447991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506011531401657-150x120.jpg" align ="left"></a>第74届美国广播电视文化成就奖——皮博迪奖，周日在曼哈顿华尔街举行了颁奖典礼。一部揭露中共政权活体摘取法轮功学员器官真相的纪录片《活摘》，拿下了今年的纪录片大奖。本片在当晚的美国主流电视媒体圈引起了广泛的震动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年06月02日 10:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/25/n4442363.md#1" target="_blank">澳洲墨尔本集会揭中共活摘罪恶 民众震惊</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/25/n4442363.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/05/1505250231251341-150x120.jpg" align ="left"></a>“目前追查国际已经公布了22份调查录音。随着越来越多证人、证据的曝光，活摘罪行已经成为中共当局无法掩盖和躲避的话题。”这是“追查迫害法轮功国际组织”墨尔本代表樊先生，在2015年5月23日下午举行的公众集会上，向墨尔本民众公布针对活摘调查的结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年05月25日 11:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/26/n4304920.md#1" target="_blank">281号决议案吁制止中共活摘  南加民众征签</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/26/n4304920.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/11/1411260433152700-150x120.jpg" align ="left"></a>（大纪元记者李瑾萱贝克斯菲尔德报导）为制止中共政府针对法轮功学员和其他良心犯的“强摘器官”行为，推动美国众议院尽快通过281号决议案，近日，洛杉矶部分法轮功学员和志愿民众来到加州中南部贝克斯菲尔德市，为281号决议案征签，呼吁民众共同制止“这个星球上前所未有的罪恶”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年11月27日 3:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/10/n4292052.md#1" target="_blank">奥巴马专机飞北京 奥习私晤涉敏感话题</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/10/n4292052.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/11/1411091325092192-150x120.jpg" align ="left"></a>11月10日和11日，奥巴马将参加在北京举行的APEC会议。11日晚间，奥巴马将与习近平将共进私人晚餐。随后奥巴马将和习近平在12日进行闭门会晤。美国国家安全顾问赖斯介绍，奥巴马总统此次访华将是美中两国确立未来两年前瞻性议程的一次机会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年11月10日 2:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/7/n4290072.md#1" target="_blank">美国国际宗教自由委员会发声明关注王治文近况</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/7/n4290072.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/11/1411061403422639-150x120.jpg" align ="left"></a>美国国际宗教自由委员会（USCIRF）2014年10月30日发表声明，特别关注原法轮大法研究会义务联系人、北京法轮功学员王治文、李昌等人近况，谴责中共15年来对法轮功修炼者的持续迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年11月07日 3:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/4/n4287718.md#1" target="_blank">加拿大主流媒体关注中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/4/n4287718.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/11/1411032224151814-150x120.jpg" align ="left"></a>（大纪元记者李平编译报导）继加拿大前国会议员大卫?乔高（David Kilgour）和人权律师大卫?麦塔斯（David Matas ）于2006年出版《血腥的器官活摘》（Blood Harvest）一书后，美国作家兼研究员伊森?葛特曼（Ethan Cuttman）在自己独立调查基础上，今年8月12日出版的《大屠杀》（The Slaughter：Masskil.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年11月04日 11:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/4/n4287525.md#1" target="_blank">阻中共强摘器官 逾215美国会议员联署281决议案</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/11/4/n4287525.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/11/1411031953092192-150x120.jpg" align ="left"></a>截至2014年11月3日，美国281决议案获215位国会议员联署。281决议案要求中共当局立即停止从所有的囚犯、包括从法轮功良心犯和其它宗教信仰及少数族裔人士身上强摘器官；要求中共立即停止已持续15年的对法轮功精神修炼者的迫害，立即释放所有法轮功修炼者和其他良心犯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年11月04日 6:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/10/11/n4269414.md#1" target="_blank">美国会中国委员会谴责中共继续大规模迫害法轮功</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/10/11/n4269414.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/10/1303032115081538-150x120.jpg" align ="left"></a>美国国会及行政当局中国委员会（CECC）10月9日发布2013年度中国人权和法治发展的年度报告。报告强调中国目前的人权和法治在过去一年不仅没有改善，甚至在相关领域后退。报告表示，中共当局在2013年继续大规模和系统的迫害法轮功等信仰人士，酷刑和虐待普遍且严重，法轮功学员可能被强摘器官。报告担心，北京持续对香港事务的干预将破坏香港的自由法治；报告说，中共公布的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年10月11日 7:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/9/21/n4253985.md#1" target="_blank">美国阻中共强摘器官281决议案中英文全文</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/9/21/n4253985.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/09/1303032115081538-150x120.jpg" align ="left"></a>美国众议院外交事务委员会7月30日完成制止中共强摘器官的281号决议案最后审议。以下为281决议案全文翻译。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年09月21日 8:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/9/16/n4249427.md#1" target="_blank">美医学杂志曝中共器官移植内幕 吁国际必须制止强摘</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/9/16/n4249427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/09/1409151155122192-150x120.jpg" align ="left"></a>美国专业医学期刊《美国移植杂志》近日在网上发表标题为《发生在中国的死刑犯器官摘取》（American Journal of Transplantation )的文章。文章从专业角度对中国器官移植来源提出三大质疑。文章说，原天津武警总队医院的一位前医生（王国齐）在美国国会的作证曝光了中共强摘器官的行为，但根据最新的官方数据得出的结论，中共目前依然在强摘死刑犯器.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年09月16日 11:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/29/n4235766.md#1" target="_blank">美专业医学杂志曝中国移植内幕（四）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/29/n4235766.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/1409151155122192-150x120.jpg" align ="left"></a>美国专业医学期刊《美国移植杂志》近日在网上发表题为《发生在中国的死刑犯器官摘取》文章。该文章提出了三大质疑，其中包括对于中国用于移植的器官来源的质疑。文章强调，外界忽略了中共强摘法轮功学员等良心犯的器官；中国的强摘器官的做法应立即终结。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年09月15日 11:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/28/n4234940.md#1" target="_blank">美医学杂志曝中共器官移植内幕 国际必须制止强摘</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/28/n4234940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/1403201914342583-150x120.jpg" align ="left"></a>美国专业医学期刊《美国移植杂志》近日在网上公开了标题为《发生在中国的死刑犯器官摘取》专业文章，文章提出三大质疑，尤其是质疑中国用于移植的器官来源；文章表示，中共出尔反尔，对是否淘汰使用死刑犯器官的做法前后自相矛盾；外界忽略了中共强摘法轮功学员等良心犯的器官。 文章说，中共当局在2014年继续强摘器官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年09月03日 9:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/28/n4234903.md#1" target="_blank">美专业医学杂志曝中国器官移植内幕（一）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/28/n4234903.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/1408271738182003-150x120.jpg" align ="left"></a>专业医学期刊《美国移植杂志》近日在网上公开了标题为《发生在中国的摘取死刑犯器官》专业文献文章，文章提出三大质疑，质问中国移植的器官来源；文章表示，中共出尔反尔，对是否淘汰使用死刑犯器官的做法前后自相矛盾；外界忽略了中共强摘法轮功学员等良心犯的器官。 中国当局在2014年继续强摘器官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年08月28日 4:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/9/n4476278.md#1" target="_blank">塞浦路斯邮报报导中共残酷迫害法轮功</a><br></h3>《塞浦路斯邮报》（Cyprus Mail）七月六日在网站上刊登了记者Theo Panayides拍摄的采访法轮功学员的录像。录像中披露了中共对法轮功学员的迫害，以及中共活摘器官的罪行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年07月09日 8:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/9/n4476271.md#1" target="_blank">澳洲多家媒体揭中共活摘器官</a><br></h3>二零一五年七月五日至七日，加拿大著名人权律师大卫?麦塔斯（David Matas）到访西澳首府珀斯市，参加第十五届世界受害者协会学术研讨会（15th International Symposium of the World Society of Victimology），当地多家媒体先后采访麦塔斯先生，报导和揭露中共活摘法轮功学员器官的罪行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年07月09日 6:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/17/n4460115.md#1" target="_blank">江泽民活摘器官罪在丹麦大选前传播</a><br></h3>丹麦一年一度的“人民聚会（Folkem?det）”活动二零一五年六月十一日至十四日在丹麦的博恩霍尔姆岛（Bornholm）举行。时值丹麦大选的前夕，岛上聚集了为大选做宣传的各政党的政治家们，全丹麦众多的组织和机构、公司和企业的各界人士也聚集博恩霍尔姆岛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年06月18日 4:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/6/15/n4457755.md#1" target="_blank">葡萄牙前外交官含泪签名制止中共活摘</a><br></h3>一位外交部的退休官员在葡萄牙首都了解中国大陆法轮功学员被强行活摘器官后，他含着眼泪签名，支持制止中共罪行，并表示希望提供帮助。这位前外交官是葡萄牙法轮功学员近日在系列真相活动中了解真相的民众之一。2015年5月至6月期间，葡萄牙法轮功学员利用周末节假日举行系列活动、向民众讲述法轮功学员在中国被迫害的真相，揭露中共强行活摘法轮功学员器官的罪恶，征签反迫害反活摘.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年06月15日 4:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/11/n4432444.md#1" target="_blank">美媒：中共仍在杀害和摘取法轮功学员器官</a><br></h3>（大纪元记者秦雨霏编译报导）中共是一个残忍的暴政，比如一胎化政策。最近曝光的是杀害政治囚犯并出售他们的器官。美国律师、获奖作家、发现研究所高级研究员Wesley Smith5月5日在《国家评论》概述了前加拿大国会议员大卫?乔高对欧洲议会就中共活摘器官做的演讲。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年05月11日 11:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/10/31/n4284815.md#1" target="_blank">报告：大陆器官移植来源?黄洁夫谎言连篇</a><br></h3>追查迫害法轮功国际组织（简称“追查国际”）10月30日发布消息说，中共前卫生部副部长黄洁夫涉嫌推动和参与活体摘除器官的罪行并误导国际社会对此进行的调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年10月31日 7:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/4/n1276301.md#1" target="_blank">沈阳和辽宁人防网的关闭说明了什么?</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/4/n1276301.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604040721281123-150x120.jpg" align ="left"></a>《人民画报》2000年第十一期撰文 “人 民 防 空走过五十年” 中指出: “近年来，上海、沈阳两市人 防系统处理各类紧急救助数百次。辽宁省政府决定，人防建设要实行防空与应急救援一体化建设，上海市则提出要向民防发展，完成与国际接轨。” 由此可见，沈阳市和辽宁省在人防建设方面在全国算是冒尖的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月04日 5:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/4/n1276116.md#1" target="_blank">【苏家屯系列访谈】郭军﹕苏家屯事件的来龙去脉</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/4/n1276116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/604032114561030-150x120.jpg" align ="left"></a>(大纪元记者余心、南希美国华府报导)沈阳苏家屯集中营虐杀大量法轮功学员﹐活体器官摘除并秘密焚尸的惊天暴行被海外大纪元时报揭露出来后﹐前后分别有两位证人出面指证﹐引起广大民众及团体的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月04日 3:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/1/n1273488.md#1" target="_blank">美敦促中国查苏家屯集中营活体摘除器官指控</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/1/n1273488.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/60401042155789-150x120.jpg" align ="left"></a>美国敦促中国调查最近媒体指控，据说有数千名法轮功学员在集中营被杀害后，尸体的器官被出售求利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月01日 11:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/1/n1273353.md#1" target="_blank">我的弟弟在哪里？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/1/n1273353.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/04/603311513501627-150x120.jpg" align ="left"></a>(大纪元记者南希美国华府报导) 3月27日下午，大华府、纽约、波士顿、北卡罗来纳、加拿大多伦多、台湾、香港等近千名法轮功学员身穿素服﹐佩戴白花与蓝丝带在美国首都白宫前拉法叶公园，举办肃穆而哀凄的公众大集会﹐抗议中共在沈阳苏家屯建立集中营，非法关押6千多名法轮功学员，屠杀、盗卖法轮功学员器官后焚尸灭迹的兽行﹐并且呼吁美国总统布什、国际社会以及媒体立即进行调查.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月01日 4:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1272882.md#1" target="_blank">联合国特使将调查苏家屯黑幕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1272882.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603310629091164-150x120.jpg" align ="left"></a>......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月31日 7:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1272579.md#1" target="_blank">苏家屯集中营事件 联合国着手调查</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1272579.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603310148151502-150x120.jpg" align ="left"></a>（中央社台北三十一日电）联合国人权委员会酷刑问题特别报告员诺瓦克30日表示，正尽力调查法轮功提出中国大陆辽宁省沈阳苏家屯“集中营”秘密关押法轮功学员，大量活体摘除法轮功学员器官出售的指控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月31日 2:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1271996.md#1" target="_blank">沈阳军区老军医指证苏家屯集中营内幕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1271996.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/60330125949789-150x120.jpg" align ="left"></a>(编按：沈阳军区一名老军医指正苏家屯的医院地下集中营活体摘除法轮功学员的黑幕。小标题为编者所加。大纪元正陆续收到更多知情人向大纪元提供相关内幕信息﹐和联络更多的证人，并进行调查。大纪元为提供者的安全考虑，一些证人可不公布真实姓名和相关的个人资料。)......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月31日 12:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/29/n1270319.md#1" target="_blank">苏家屯案曝光三周 中共官方首次回应</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/29/n1270319.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603290734101123-150x120.jpg" align ="left"></a>经过近三周的沉默，中共官方正式回应苏家屯集中营活体摘取法轮功学员器官事件。美联社3月28日报导，中共外交部发言人秦刚在一个记者会上否认存在集中营，指称法轮功“制造谎言”，并邀请记者参观这个涉嫌设立集中营的地方。香港明报报导，他还反问“一个小医院能容纳下六千人吗？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月29日 3:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/27/n1268193.md#1" target="_blank">怀明：苏家屯庞大地下工事群</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/27/n1268193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603272143061548-150x120.jpg" align ="left"></a>看了大纪元3月25日的关于苏家屯地下武器仓库的报导后我禁不住上网上查寻是否有有关的日军地下工事的记录。欣慰的是还真的发现了不少网站上都在2005年8月份报导过在苏家屯发现有日军地下工事。粗粗一看,好像都千篇一律。可细细归纳分析,竟然发现有一些蛛丝马迹,似乎在向我们揭示着一写什么。在此我不妨将报导原文和我的一些疑虑都一一道来。明眼人或许会比我更理解其中名堂所在.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月27日 7:53 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/23/n1263551.md#1" target="_blank">人命关天 电话爆量苏家屯 官员忙踢皮球</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/23/n1263551.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/60323105726993-150x120.jpg" align ="left"></a>（大纪元记者吴涔溪台北报导）苏家屯集中营活摘法轮功器官曝光后，向政府部门要真象的行动不断。记者透过特殊管道了解，苏家屯当地的政府部门、公安、卫生单位收到大量来自海外的电话，要求彻底调查苏家屯案的真实性、犯罪人员及幸存者。由于此案关系重大，辽沈官员们都三缄其口，忙踢皮球，苏家屯究竟藏有什么样的黑幕及谜团更引人关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月23日 9:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/20/n1260648.md#1" target="_blank">主刀医生太太揭苏家屯器官摘除黑幕（续）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/20/n1260648.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603201508191123-150x120.jpg" align ="left"></a>（大纪元记者周敏军报导）有关前几天揭露的苏家屯集中营﹐设立在苏家屯辽宁省血栓中西结合医院。证人再一次接受采访。证人进一步披露她的前夫就是活体器官摘除主刀医生之一。他是脑外科医生﹐当时是实习医生，很快被提拔为主治医生。器官摘除手术中主要让他从事眼角膜摘除。由于活体器官摘除和焚尸的惨烈﹐给证人和她的家庭带来摧毁性的打击。每次回忆﹐证人都情绪激动﹐承受难以描述的痛.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月20日 6:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/20/n1260002.md#1" target="_blank">来自苏家屯的最新消息</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/20/n1260002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603191952281667.jpg" align ="left"></a>（大纪元记者文华综合报道）自从大纪元曝光苏家屯集中营惊天黑幕后，据内部消息透露，3月13日晚，中共中央直接派人秘密来到沈阳市，召集苏家屯副区长、公、检、司、法、卫等部门开会，布置和研究对策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月20日 8:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/20/n1259894.md#1" target="_blank">大陆医院﹕移植器官来自健康活体</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/20/n1259894.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/60319182040459-150x120.gif" align ="left"></a>（大纪元记者辛菲采访综合报导）中共官方长期以来以极其不人道的方式摘下死囚器官，在国际社会已是公开的秘密。而其手法之残忍和不道德，已被民主国家列为新的纳粹行为，受到国际医学界、人权组织的严重关注和强烈抵制。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月20日 3:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/20/n1259877.md#1" target="_blank">沈阳苏家屯秘密集中营更多图片资料</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/20/n1259877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603191222211830-150x109.jpg" align ="left"></a>近日沈阳苏家屯秘密集中营被曝光之后，一位曾在该集中营工作的人员指证集中营设在“沈阳苏家屯辽宁省血栓中西结合医院”。以下为明慧网提供的该医院照片及资料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月20日 1:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/18/n1258729.md#1" target="_blank">苏家屯集中营的血腥黑幕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/18/n1258729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/6031801293825-150x120.jpg" align ="left"></a>中共迫害法轮功的沈阳苏家屯集中营和“焚尸炉”的消息传出之后，引起社会各界的震惊。法轮功学员及民众分别在美国旧金山，洛杉矶，纽约，华盛顿，加拿大蒙特利尔，多伦多以及香港，台湾，韩国等地举行集会，强烈谴责中共虐杀法轮功学员并销售其器官的暴行，呼吁国际社会参与调查和制止虐杀，早日结束中共国家恐怖主义的统治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月18日 2:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/17/n1257362.md#1" target="_blank">证人现身指证苏家屯集中营 摘活体器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/17/n1257362.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603172041581017-150x120.jpg" align ="left"></a>(大纪元记者季达采访报导）中国沈阳苏家屯集中营买卖活体法轮功学员器官事件获得新的线索，一位该集中营的工作人员接受大纪元记者采访透露该集中营设在沈阳苏家屯辽宁省血栓中西结合医院。2001年开始有6千名法轮功学员被秘密关押此地，迄今没有人能够生还出来。此家医院发生了大量活体摘除法轮功学员肾脏、肝脏、和眼角膜等器官的骇人罪恶，被强行摘取器官的法轮功学员的活体被秘密.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月17日 10:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/3/n1275942.md#1" target="_blank">呼吁联合国 不仅仅要调查一个“苏家屯”</a><br></h3>自苏家屯恶性事件曝光后，引起了世界震动和关注，联合国也将对中共活体摘除法轮功学员器官，然后将法轮功学员身体塞入焚尸炉毁尸灭迹的黑幕展开调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月03日 9:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/2/n1274345.md#1" target="_blank">马国新闻网再度转载苏家屯集中营相关新闻</a><br></h3>中国苏家屯集中营事件自3月9日在大纪元网站被曝光以来，目前日渐引起媒体关注。马来西亚网路媒体‘当今大马’英文版3月22日以“中国集中营摘取器官”为标题转载了大纪元3月17日刊登的一则有关“ 证人现身指证苏家屯集中营摘活体器官”的报导后，于4月1日再度转载大纪元英文网3月30日的另一则新闻：“告密者披露其它的中国集中营”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月02日 5:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/1/n1273232.md#1" target="_blank">希望之声愿派记者前往调查苏家屯专案</a><br></h3>鉴于中共外交部发言人秦刚在3月28日周二的例行新闻发布会上就苏家屯摘取法轮功学员人体器官案提出否定, 并邀请媒体记者亲自到苏家屯查看实情，希望之声国际广播电台(简称希望之声)特此回应，愿意应邀派专题记者前往调查苏家屯设立关押法轮功弟子的集中营专案，并将于近日内向中共驻美大使馆和相关新闻主管单位正式递交意向信函。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月01日 3:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/1/n1273226.md#1" target="_blank">德国人权组织成员要求调查苏家屯贩卖器官一事</a><br></h3>德国国际人权组织成员参加支援中国高智晟律师维权绝食接力活动，要求国际社会调查苏家屯贩卖法轮功学员人体器官事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月01日 3:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/4/1/n1273160.md#1" target="_blank">林泉：人体作为工业原料的用途</a><br></h3>昨天看到一篇沈阳军区老军医的文章，很受震撼。文章揭露，“国家规定，政府有权设立重刑犯罪分子的资源再回收机构，这是中共中央军委在1962年就有的文件，一直沿袭至今。该文件规定，死刑及重刑犯罪份子可以根据国家发展需要，进行相应的革命化处理。1984年补充规定，重刑犯的器官移植被合法化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年04月01日 12:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1273076.md#1" target="_blank">珊洁：沈阳老军医所言解开了我心中的迷</a><br></h3>今天看到‘沈阳军区指证苏家屯集中营内幕’一文：他说‘所谓的苏家屯集地区的医院仅仅是全国36个类似集中营的一部分。  2005年之前的确曾经关押超过1万多人。   吉林集中营代号672－S关押人数超过12万’沈阳老军医所言解开了我心中的迷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月31日 10:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1273018.md#1" target="_blank">齐家贞：苏家屯案不会是空穴来风</a><br></h3>最近揭发的苏家屯虐杀法轮功学员并摘取他们器官卖钱的罪行，令人震惊，或许有人对此事表示怀疑，因为它惨绝人寰得难以置信。但我认为苏家屯案不是空穴来风。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月31日 9:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1272939.md#1" target="_blank">《国家评论》一个叫苏家屯的地方</a><br></h3>......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月31日 8:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1272892.md#1" target="_blank">澳洲《先驱太阳报》报苏家屯集中营惨案</a><br></h3>澳大利亚《先驱太阳报》3月30日报道如下：“两位中国投诚者和其他4200人一起敦促（澳洲）政府调查关于中国存在为非法人体器官交易服务的集中营的指称。前中国驻雪梨总领事馆外交官陈用林和前情报官员郝凤军已经（写信）要求霍华德总理利用下周中国总理温家宝访问澳洲的机会向他提出位于中国苏家屯的集中营问题。已经有4000多人签名表示支持。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月31日 7:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/31/n1272262.md#1" target="_blank">联合国人权委员会调查苏家屯集中营传闻</a><br></h3>联合国人权委员会酷刑问题特别报告员诺瓦克昨天表示，正尽力调查法轮功组织提出辽宁省沈阳苏家屯“集中营”秘密关押法轮功学员，大量活体摘除学员器官出售的指控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月31日 9:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/30/n1271510.md#1" target="_blank">【中国聚焦】评“苏家屯集中营”曝光之意义</a><br></h3>桑妮：观众朋友，大家好，欢迎收看“中国聚焦”，我是桑妮。自从大纪元时报披露了苏家屯秘密集中营对法轮功学员进行活体器官摘取，以及毁尸灭迹的特大新闻之后，整个世界为之震惊。人们几乎不敢相信这种连德国纳粹都自叹不如的残暴行径，竟然发生在和平的二十一世纪的今天。那么为什么会发生这种事情呢，它对中国又意味着什么呢？今天我们的节目请来了自由主义法学家袁红冰先生和作家曾铮.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月30日 3:47 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/30/n1270831.md#1" target="_blank">中共在苏家屯血栓医院加强监视</a><br></h3>中共官方经过近三周的沉默，正式回应苏家屯集中营活体摘取法轮功学员器官事件。美联社3月28日报导，中共外交部发言人秦刚在一个记者会上否认存在集中营，并邀请记者参观这个涉嫌设立集中营的地方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月30日 4:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/28/n1268777.md#1" target="_blank">李伟勋：苏家屯集中营事件的可能性见证</a><br></h3>本月23日得到信息，据两名曾被关押在该看守所学员讲，在2002年的3-4月间一天，管教到各个监房收餐具，一牢头问：干什么用？管教说：来人了。以往新来的会很快分到个监房，可是过了很长时间也没动静，管教又把收去的好多餐具都送回来了。据说是把她们送走了。当她们见到苏家屯集中营曝光后，恍然是不是把她们送去集中营了，无法排除这种可能。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月28日 11:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/24/n1265572.md#1" target="_blank">被问苏家屯 中共领事“废话”收场</a><br></h3>(大纪元记者闻迪报导) 3月23日下午6点半，澳洲国际事务协会（Australian Institute of International Affairs）在悉尼市中心的Strattons Hotel内举行研讨会，中共驻悉尼领事馆总领事邱少风应邀为做演讲嘉宾，演讲“中国外交政策：中澳关系”。在回答目前最热话题苏家屯事件时，邱领事支吾以对，提前退场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月24日 9:33 PM							</td></tr>
