--- a/gb/nf5287_9.md
+++ b/gb/nf5287_9.md
@@ -59,3 +59,33 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/12/6/n1546753.md#1" target="_blank">比利时报纸《Gazet van Antwerpen》报导中共活摘器官</a><br></h3>比利时报纸《Gazet van Antwerpen》在2006年11月28日的一篇报导中报导了中共法轮功学员身上活体摘取器官贩卖的恐怖行径，原文如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年12月06日 4:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/23/n1531939.md#1" target="_blank">大陆医院仍招募海外器官移植患者</a><br></h3>大陆媒体十五日报导了“禁止外国人到中国来进行器官移植”的卫生部决定，但是大陆各医院器官移植中心仍然招募海外器官移植患者，还认为由于法律制裁价格会升高，但是器官移植本身没有什么问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年11月23日 1:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/20/n1527735.md#1" target="_blank">人权组织促中共公布摘取器官详情</a><br></h3>人权组织星期天敦促中国公开有关从死刑囚犯身上摘取器官的详细情况。中国政府最近承认，器官移植很大一部分来自死刑犯人，但是表示事先征得了犯人及其家属的同意。 (w2006-11-20-voa4.cfm)......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年11月20日 2:09 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/10/n4007792.md#1" target="_blank">中共三中全会召开 全球反活摘器官连署逾80万</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/10/n4007792.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/11/1309301235442378-150x120.jpg" align ="left"></a>中共三中全会召开前，总部设于美国华府的“医生反对强制摘取器官组织”（Doctors Against Forced Organ Harvesting, DAFOH, www.dafoh.org）今年六月中旬发起全球征签活动：吁请联合国人权事务高级专员“要求中华人民共和国立即停止强摘法轮功学员器官”。截至10月底，全球共计有欧、美、澳、亚四大洲32个国家民众参加.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年11月11日 1:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/10/30/n3998913.md#1" target="_blank">欧洲移植界领军医学权威：中共对活摘器官心知肚明</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/10/30/n3998913.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/1310300858202133-150x120.jpg" align ="left"></a>（大纪元记者李孜、玛丽西班牙采访报导）欧洲器官移植界的领军人物、西班牙国家器官移植组织的创始人兼负责人拉斐?马特桑斯博士（Dr. Rafael Matesanz）近日在接受大纪元记者采访时表示，他坚决反对非法器官移植；他认为中共活摘法轮功学员的事件已经得到多方证实，是确实存在的；另外中共体制内很多人对此是心知肚明的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年11月01日 7:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/10/28/n3996591.md#1" target="_blank">制止中共活摘器官 美维州医学协会支持国会281决议案</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/10/28/n3996591.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/1310272111322192-150x120.jpg" align ="left"></a>美国维吉尼亚州医学协会（the Medical Society of Virginia ， MSV）于10月25-27日年会期间正式讨论一份“制止中共活摘器官”的 13-207号决议案，随后在其法律、非法行医、以及规章制度常设委员会上获得通过。这一决议案旨在支持美国国会通过281号决议案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年10月29日 10:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/10/20/n3991032.md#1" target="_blank">耻！中共输出暴力 全球攻击民团</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/10/20/n3991032.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/1310201027291770-150x120.jpg" align ="left"></a>（大纪元记者黄兰亭台湾台北综合报导）10月19日周六下午，两位暴徒再次袭击设在伦敦中国城的“向联合国呼吁制止中共活摘法轮功学员器官”的征签点。这已经是今年6月以来发生在伦敦中国城对法轮功真相点的第五次恶意攻击事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年10月20日 10:33 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/10/1/n3976161.md#1" target="_blank">全球阻活摘征签逾44万 DAFOH:中共谎称停摘囚犯器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/10/1/n3976161.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/1309301235442378-150x120.jpg" align ="left"></a>中共近日宣布，打算到二零一五年逐步停止从死刑犯身上摘取器官，并建立中国器官移植回应系统（COTRS），一个计算机化的器官分配系统，医生反对强制摘取器官组织（DAFOH）于二零一三年九月十六日发表声明表示，中共所谓的中国器官移植回应系统缺乏公开性，器官匹配过程和供体并不公开或接受第三方监督检查。中共官方的宣布是含糊不清的，它并没有给出一个最后期限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年10月01日 3:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/23/n3970098.md#1" target="_blank">华邮：薄熙来东山再起的机会几乎为零</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/23/n3970098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/09/1309221249142546-150x120.jpg" align ="left"></a>（大纪元记者赵境编译报导）被解职的中共高官薄熙来9月22日被中共以腐败、贪污和滥用职权罪，判处无期徒刑。一些熟悉薄熙来历史的专家认为，尽管薄已有64岁，他可能还会为自己东山再起寄予希望，但专家认为，他再次获得政治影响力的机会几乎为零。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年09月23日 2:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/11/n3961352.md#1" target="_blank">街头剧揭露中共活摘 高雄民众震惊</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/11/n3961352.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/09/1309101535122158-150x120.jpg" align ="left"></a>为制止中共活摘法轮功学员器官的暴行，为呼吁到大陆移植器官人数最多的台湾民众，能明白中共强摘牟利的罪恶，二零一三年九月七、八日，由台湾国际器官移植关怀协会发起，高雄阳光影剧学会导演，在高雄密集的汉神巨蛋附近街头，上演《中共活摘器官行动剧》，法轮功学员这两天日不断的向市民讲真相、征签制止迫害，过往行人、骑士目瞪口呆，惊呼不可思议，了解真相后纷纷签名连署，短短两天.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年09月11日 3:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/7/n3959124.md#1" target="_blank">专家在韩国吁制止中共活摘器官 媒体关注</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/7/n3959124.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/09/1309071152201873-150x120.jpg" align ="left"></a>在韩国的国际器官移植伦理协会邀请下，国际著名人权律师大卫?麦塔斯于9月6日在韩国仁川松岛的“sheraton仁川酒店”，与韩国20多名医疗界人士召开座谈会，呼吁韩国立法阻止韩国人前往中国接受非法器官移植，制止中共活摘器官罪行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年09月07日 11:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/2/n3954969.md#1" target="_blank">“让我的孩子们生活在没有威胁的世界中”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/2/n3954969.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/09/1309050119592305-150x120.jpg" align ="left"></a>（大纪元记者时晓萍芬兰报导）2013年8月25日到29日，由世界外科协会组织的每两年一度的“国际外科周”会议在芬兰首都赫尔辛基举行，有来自70个国家的2千名外科专家参加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年09月02日 5:41 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/8/27/n3950003.md#1" target="_blank">美国密切关注薄案“强摘器官”密集出现政府报告中</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/8/27/n3950003.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/08/1203211828001649-150x120.jpg" align ="left"></a>薄熙来案进入庭审第5天。据美国媒体报导，去年2月，王立军逃亡美国驻成都领事馆时，向美国提供了大量核心机密资料。薄熙来随后在3月份下台。这场危机触发近二十年来中南海最大政治海啸，成为国际社会关注的焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年08月27日 7:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/26/n3926455.md#1" target="_blank">专访USCIRF主席：小溪正在汇成大河 变化正在到来</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/26/n3926455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/07/1307260642542192-150x120.jpg" align ="left"></a>美国国际宗教自由委员会（the United States Commission on International Religious Freedom， USCIRF) 主席卡翠娜?兰托斯?斯维特博士(Katrina Lantos Swett)在7.20期间在华盛顿DC接受专访。自去年底以来，美国和中国媒体不断曝光发生在中国劳教所马三家的各种酷刑虐待，包括对.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年07月26日 11:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/21/n3922138.md#1" target="_blank">胡佳：活摘器官禽兽不如 冀有良知者加入追查</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/21/n3922138.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/07/1307210348571366-150x120.jpg" align ="left"></a>所以我觉得14年的抗争，这个群体付出了巨大的代价的同时，这种巨大的反抗力也让中共疲于奔命。它在镇压法轮功的过程中建立610办公室，它用国保这些，还有国家安全这些机关镇压法轮功的同时，实际上法轮功群体吸引了他们的火力，客观上是给其他维权者、异见者减轻了这种压力。而且法轮功群体在过去14年中，我觉得有两项突出的贡献吧。第一个贡献是他们开发的破网的工具，这是最早在.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年07月21日 3:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/21/n3921873.md#1" target="_blank">乔高：活摘器官是反人性罪行</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/21/n3921873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/07/130721092227100311-150x120.jpg" align ="left"></a>曾获提名诺贝尔和平奖、加拿大前内阁成员及亚太事务部长大卫?乔高（David Kilgour）日前抵港，参加法轮功学员在香港举办的“制止中共活摘器官日”（STOP ORGAN HARVESTING IN CHINA DAY）的系列活动。20日，乔高在出席《自由中国》播放研讨会上，公布了他和国际著名人权大律师大卫?麦塔斯（David Matas）合著的巨著《血腥.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年07月21日 1:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/18/n3920374.md#1" target="_blank">法国国会举行新书《国家器官》发布会</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/18/n3920374.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/07/1307181147342551-150x120.jpg" align ="left"></a>（大纪元记者邓韫词法国报导）7月17日，“医生反对强摘器官协会”（DAFOH）和“法国法轮大法协会”在法国国民议会共同举办新书《国家器官﹕移植在中国被滥用》法文版发布会，期间播放了反对强摘器官的记录片。该书作者、加拿大国际人权律师大卫·麦塔斯（David Matas）出席了新书发布会，并再次论证了活摘器官存在的真实性和严重性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年07月19日 1:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/18/n3919863.md#1" target="_blank">工笔画《天谴邪恶》揭露活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/18/n3919863.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/07/1307180855201454-150x120.jpg" align ="left"></a>这幅工笔画笔调优美，描写的却是当前惨绝人寰的一大冤案。在中国的监狱里非法关押着大批坚持‘真善忍’信仰的无辜的法轮功学员，在江泽民“名誉上搞臭、经济上搞垮、肉体上消灭”的迫害政策下，中共肆无忌惮的杀害并摘除法轮功学员器官谋利发黑财。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年07月18日 4:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/2/n3906765.md#1" target="_blank">苏格兰议会议员：将提交禁止贩卖器官修订案</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/7/2/n3906765.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/07/1307011715232210-150x120.jpg" align ="left"></a>（大纪元记者李景行英国报导）继6月24日，英国国会议员尼尔?帕里甚（Neil Parish）在议会内举行的“活摘器官”说明会上，表示将敦促英国政府采取举措，针对中共活摘法轮功学员器官一事，采取从通知本国国民中国大陆器官移植“按需杀人”的现状，直到立法禁止器官移植旅游和买卖等的行动，紧接着的6月25日，苏格兰议会议员鲍勃?多尔斯（Bob Doris）在爱丁堡苏.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年07月02日 4:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/6/26/n3902446.md#1" target="_blank">英议会再开“活摘器官”会   议员拟采取举措</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/6/26/n3902446.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/06/1306252028571820-150x120.jpg" align ="left"></a>6月24日下午，“医生反对强摘器官”（DAFOH）国际组织，在英国议会大厦举办了一场面向国会议员和社会主流人士关于中共活摘法轮功学员器官的说明会，八位国会议员、一位勋爵、八位议员助理和其他英国主流人士参加了本次会议。保守党国会议员尼尔?帕里甚（Neil Parish）主持会议，与会议员们表示将与国会各党派议员，及苏格兰议会议员共同努力，同时借鉴其它国家的做法.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年06月26日 4:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/6/24/n3900869.md#1" target="_blank">揭中共活摘 大纪元记者获颁美“卓越新闻报导奖”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/6/24/n3900869.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/06/1306232115512192-150x120.jpg" align ="left"></a>美国专业记者协会周五(6月21日)晚在华盛顿DC国家记者俱乐部，举办年度“卓越新闻报导奖（Sigma Delta Chi award for excellence in journalism）”颁奖晚宴。英文大纪元时报记者罗宇(Matt Robertson)，以揭露中共活摘法轮功学员器官的系列文章，成为获奖者之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年06月24日 10:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/6/9/n3889993.md#1" target="_blank">保加利亚国际人体展 媒体质疑尸体非法 来自中国</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/6/9/n3889993.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/06/1306081548162192-150x120.jpg" align ="left"></a>总部位于美国亚特兰大的第一展览公司（Premier Exhibitions）2013年4月份在保加利亚首都索菲亚进行了人体尸体展，这一展览引起保加利亚国家广播电台、保加利亚电视频道TV+对尸体来源的强烈质疑，两家主流媒体都对此进行了深度报导。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年06月14日 11:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/24/n3878774.md#1" target="_blank">澳联邦参议员将提法案制止中国活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/24/n3878774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/05/1303210931172366-150x120.jpg" align ="left"></a>（大纪元记者吴建国、俞建新澳洲采访报导）在3月一项反对在中国的器官活摘行为的动议案在澳洲联邦参议院一致通过后，该动议案的发起人参议员马迪根（John Madigan）在5月23日告诉大纪元记者，计划在本周向澳洲联邦议会发出通知，将于7月正式提出法案，争取立法，帮助制止中国当局在其监狱系统非法摘取人体器官牟利的恶行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年05月24日 10:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/23/n3877934.md#1" target="_blank">中共“按订单杀人”德媒披露更多细节 民众愤怒</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/23/n3877934.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/05/1304201534102378-150x120.jpg" align ="left"></a>德国《时代周报》3月13日发表了“器官贸易——下单订购心脏”为题的长篇文章，详述中共治下的器官移植黑幕，并引发德国读者广泛评论，读者纷纷对中共灭绝人性的血腥残暴表示愤怒与悲哀。该文并且被“反强摘器官医生协会”（DAFOH，Doctors Against Forced Organ Harvesting）译为英文，发表该在该协会网站上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年05月24日 3:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/23/n3877302.md#1" target="_blank">活摘器官令人发指 硅谷发明家中断6千万中共投资项目</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/23/n3877302.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/05/1305222211461567-150x120.jpg" align ="left"></a>（大纪元记者马有志、罗宇旧金山报导）去年5月，硅谷的发明家杰佛瑞?范?密朵博克（Jeffrey Van Middlebrook）与生意伙伴计划在2012年9月去中国，完成一项中国政府投资6千万美元的研发项目，开发一项由他们发明的从废气中提炼工业原料的绿色工程。但是，一桩在中国发生的事的报导让发明家密朵博克寝食难安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年05月23日 1:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/9/n3866290.md#1" target="_blank">澳洲纽省议会听证 十多万人签名请愿制止活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/9/n3866290.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/05/1305091800582126-150x120.jpg" align ="left"></a>5月9日（星期四）晨，在澳洲纽省议会进行的听证辩论会上，绿党上议员大卫?舒布瑞杰（David Shoebridge）、约翰?凯（John Kay）和简?巴勒姆（Jan Barham）一道，向纽省上议院成功递交了多达十多万份的澳洲市民签名请愿书，要求纽省政府立法制止非法器官移植买卖，以及停止培训器官移植医生从事非法器官摘取。这是纽省有史以来收到签名人数最多的请.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年05月10日 10:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/6/n3864064.md#1" target="_blank">媒体的道义　民众的良知</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/6/n3864064.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/05/1305061308362542-150x120.jpg" align ="left"></a>（大纪元记者李景行英国利兹报导）继在英国议会大厦举办了第四场由加拿大前亚太司司长、资深国会议员大卫?乔高（David Kilgour）和知名作家、前资深调查记者伊森?葛特曼（Ethan Gutmann）和国际 “医生反对强制摘取器官”组织成员李慧戈（音）教授等专家学者主讲的揭露中共活摘法轮功学员器官贩卖的罪恶说明会之后， 5月3日晚，英国内陆城市利兹继而举办.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年05月06日 9:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/4/17/n3849210.md#1" target="_blank">国际人权组织年会 中共活摘成焦点</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/4/17/n3849210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/04/120722131557100379-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>国际人权协会2013年度大会在德国前首都波恩市举行，尤其引人注目的是二零一三年四月十三日下午的中国专题研讨会，今年的主题是中共活摘法轮功学员器官，以及对网络的封锁和人权的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年04月17日 9:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/31/n3835621.md#1" target="_blank">全球自由网络联盟：反中共防火墙战役激烈</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/3/31/n3835621.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303310621112192-150x120.jpg" align ="left"></a>他说，中共用最先进的网络信息封锁系统来检查过滤所有通过中国网络边界的数据，所以5亿中国网民都想突破这道封锁。他说从某一方面来讲，这道防火长城就像21世纪的一面柏林墙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年03月31日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/27/n3973432.md#1" target="_blank">北京阻活摘罪曝光 联合国官员：中共恶行放YouTube!</a><br></h3>2013年9月7日至27日，联合国人权理事会大会在日内瓦召开。中共活摘法轮功学员器官的罪恶在此次联合国大会、研讨会等活动上连续曝光。多国外交官、多位联合国官员纷纷表示赞赏和支持法轮功学员在国际上勇敢讲出真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年09月27日 8:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/8/19/n3944067.md#1" target="_blank">皇甫容：签名反活摘 大家一起来</a><br></h3>目前，由“反强摘器官医生协会”（Doctors Against Forced Organ Harvesting，简称DAFOH）发起的全球联署征签行动正在全球各地进行。该联署呼吁联合国人权事务高级专员：要求中共立即停止活摘法轮功学员器官的罪行，并调查法办活摘器官的反人类罪犯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年08月19日 10:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/21/n3876233.md#1" target="_blank">黄洁夫为不道德获取器官辩护 -欲盖弥彰</a><br></h3>（大纪元记者何蔚综合报导）被撤职的前中国卫生部副部长黄洁夫日前在中国的一个新闻发布会上，为中国系统性获取死刑犯器官的制度辩护，说“我不反对用死刑犯的器官，如果他或她自愿表示捐赠，这就是他最后的愿望。”。但澳洲媒体澳广却以维吾尔族医生的经历表明，死刑犯在中弹未死之时便被活体摘除了器官。而澳洲医学教授辛格则表示，黄洁夫是中国不道德获取死刑犯器官体系的责任人，是不.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年05月21日 10:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/9/n3866098.md#1" target="_blank">澳专家：澳洲应率先制止非法移植旅游</a><br></h3>（大纪元记者何蔚澳洲悉尼报导）5月8日，澳纽器官移植学会主席，世界骨髓捐献者协会前任会长和器官移植全球联盟主席杰里米?查普曼（Jeremy Chapman）教授应澳洲绿党纽省上议员大卫?胥布瑞杰（David Shoebrisge）的邀请，就澳洲应有效制止‘旅游器官移植’问题在省议会做了演讲。他认为澳洲有责任维护文明社会的准则，在制止非法移植旅游上应起领先作用.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年05月09日 8:45 AM							</td></tr>
