--- a/gb/nf5287_8.md
+++ b/gb/nf5287_8.md
@@ -59,3 +59,39 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/11/9/n1895692.md#1" target="_blank">武警广东总院：器官供体分配系统仍运作</a><br></h3>随着知情人士和媒体陆续曝光中共将法轮功学员、良心犯、政治犯等人士处死摘取器官作为移植手术的供源，国际谴责不断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年11月09日 5:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/10/29/n1883741.md#1" target="_blank">天津医师来台揽客 中国移植现况露底</a><br></h3>天津第一中心医院肝移植主任朱志军，藉两岸医学研讨会，来台接受患者肝移植术前评估，消息批露后，这家中国最大器官移植中心是否仍有大量来路不明的供体进行移植，中共5月1日公布人体器官移植条例是否只是奥运前的人权遮羞布，引起国际瞩目。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年10月30日 1:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/10/18/n1871351.md#1" target="_blank">日男子中国买卖人体器官被捕</a><br></h3>日本总领事馆透露，日本男子长濑博之于9月11日涉嫌在华非法买卖人体器官在上海被捕，这是首次有日本人因这类案件而被捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年10月18日 8:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/22/n4230673.md#1" target="_blank">【传奇时代】欧洲的抉择</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/22/n4230673.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/1401290644462320.jpg" align ="left"></a>2013年12月9日六位来自北美、亚洲和欧洲的医生和律师，赶赴联合国总部日内瓦，他们将5个月之内搜集到150万个来自全球的呼吁联合国调查中共从法轮功学员身上摘取器官，牟求暴利的请愿签名，交给联合国人权理事会高级专员办公室。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年08月22日 6:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/1/n4214076.md#1" target="_blank">公布周永康案前 美国点名释放前公安部司长李昌</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/8/1/n4214076.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/1407311509082192-150x120.jpg" align ="left"></a>7月29日，中共正式公开审查前安全主管周永康，打破其不打击现任和前任政治局常委的不成文规定。 此前一天，7月28日，美国国务院发布新年度宗教自由报告，报告罕见点名在1999年被重判18年的北京法轮功研究会主要负责人、前公安部计算机管理司司长李昌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年08月01日 2:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/7/29/n4212362.md#1" target="_blank">周永康被立案审查 美国暗中铺排留后手</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/7/29/n4212362.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/07/1407152045272192-150x120.jpg" align ="left"></a>2014年7月29日下午17点59分，中共官媒报导，中共中央决定对中共前政法委书记周永康进行立案审查。周永康长期主管中共政法委，其两大死罪是发动军事政变和活体摘取、贩卖法轮功学员器官。作为全球领袖和以自由平等民主人权为立国之本的国家，美国在中共官方宣布审查周永康案之前，早已暗中铺排，为日后中共酷刑迫害法轮功和活摘器官的真相大白于天下和清算恶首作大量准备。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年07月30日 12:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/7/23/n4206955.md#1" target="_blank">欧洲理事会颁公约反对人体器官贩运</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/7/23/n4206955.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/07/1407221655002639-150x120.jpg" align ="left"></a>近日欧洲理事会公布了一个禁止人体器官贩运的新公约，呼吁所有国家能签署这个公约，认定贩卖器官是一种刑事犯罪并对犯罪人进行惩罚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年07月23日 11:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/7/16/n4201416.md#1" target="_blank">7.20法轮功反迫害15周年 美国首都活动通告</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/7/16/n4201416.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/07/1307120322141012-150x120.jpg" align ="left"></a>今年的7月17日，美国首都华盛顿特区将举行反迫害15周年7.20大型活动，法轮功学员将在美国国会山前举行“解体中共 停止迫害法轮功 ”，声援一亿七千万中国民众退出中共和相关组织 “为主题的大型集会，美国多位重量级国会议员、多个世界知名人权和宗教自由组织的代表、受迫害的法轮功学员代表等将参加活动，并在现场发表公开讲话。随后，法轮功学员将从美国国会山出发，在华府.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年07月17日 9:57 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/7/7/n4194556.md#1" target="_blank">【历史今日】加拿大独立调查确证中共活摘人体器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/7/7/n4194556.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/07/1407061440082639-150x120.jpg" align ="left"></a>历史上的今天，2006年7月6日,加拿大前亚太司司长、资深国会议员大卫?乔高（David Kilgour）和国际人权律师大卫?麦塔斯（David Matas）组成的独立调查组向媒体公开了“关于调查指控中共摘取法轮功学员器官的报告”。在当天的新闻发布会上，麦塔斯将活体摘取法轮功学员器官的行为称为“这个星球上前所未有的邪恶”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年07月07日 1:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/5/15/n4156009.md#1" target="_blank">8千民众纽约大集会  曝光中共丑恶行径</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/5/15/n4156009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/05/1405141820251973-150x120.jpg" align ="left"></a>（大纪元记者蔡溶纽约报导）5月14日，8000名来自全球各地的部分法轮功学员，在联合国总部大楼对面的哈玛绍广场（Dag Hammarskjold Plaza）集会，敦促联合国责令中共停止迫害法轮功。纽约当地民众看到如此规模的集会，纷纷驻足、取传单，了解法轮功的真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年05月15日 9:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/4/23/n4138042.md#1" target="_blank">马国法轮功呼吁奥巴马公开中共活摘器官证据</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/4/23/n4138042.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/04/1404221230392146-150x120.jpg" align ="left"></a>(大纪元记者张建浩马来西亚吉隆坡报导) 美国总统奥巴马在本周三（23日）起将到亚洲四国进行访问，并将于26日首次访问马来西亚。马来西亚法轮功学员在奥巴马抵达前夕呼吁奥巴马及美国政府，公开所掌握的中共活摘器官证据，不要再继续保持沉默。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年04月23日 12:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/4/14/n4130747.md#1" target="_blank">《乌克兰青年报》报导中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/4/14/n4130747.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/04/1404140150211459-150x120.jpg" align ="left"></a>二零一四年三月二十五日，《乌克兰青年报》发表了署名为“玛丽娜?谢尔金科”的长篇政论《北京“科技”，亚努科维奇想从中国吸取什么经验》。文章中报导了中共迫害法轮功，并活体摘取法轮功学员器官的消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年04月14日 3:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/4/6/n4124943.md#1" target="_blank">揭中共活摘器官  台湾学童获甘地人权奖</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/4/6/n4124943.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/04/1404060731482357-150x120.jpg" align ="left"></a>（大纪元记者刘晓茹台湾云林报导）来自云林县不同学校的8位国中小学生，以“反中共活摘器官盗卖”为议题，参加财团法人金车教育基金会办理的第三届“爱让世界转动Kids into the world”行动征选，获得“甘地人权奖”，4月19日将至台北领奖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年04月08日 4:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/4/2/n4121890.md#1" target="_blank">内外交困 周永康澳洲被起诉再次开庭</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/4/2/n4121890.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/04/1404020810042126-150x120.jpg" align ="left"></a>（大纪元记者袁丽澳洲悉尼报导）前中共政法委书记周永康被澳洲法轮功学员起诉一案，于3月28日，在澳洲高等法院再次开庭，法庭上就三位原告提出对周永康在任职期间，对法轮功学员犯下的群体灭绝罪和酷刑迫害进行了聆讯。尽管，目前周永康及其党羽在中国已经被收押，三位原告李洁霖、陈京晓和岳昌智均表示起诉依然会进行到底。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年04月02日 11:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/3/20/n4110675.md#1" target="_blank">葡萄牙主要电视台报导中共活摘器官暴行 震惊全国</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/3/20/n4110675.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/03/1403251237102158-150x120.jpg" align ="left"></a>2014年2月9日下午，葡萄牙三大电视台之一SIC的新闻频道节目SIC Noticia，在《所有真实》(Toda A Verdade)栏目播出了一部专题纪实片，片题为《红色制度下法轮功》。片中是对世界知名律师、医生、教授、作家、媒体人、制片人和法轮功学员的采访，是国际社会对中共迫害法轮功的部分反馈。纪实片播出后，在葡萄牙朝野上下引起极大震动。很多人跑来问法轮.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年03月29日 12:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/3/26/n4116263.md#1" target="_blank">【世事关心】欧洲议会决议谴责中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/3/26/n4116263.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/03/1312301153362666-150x120.jpg" align ="left"></a>12月12日，在2013年欧洲议会最后一次全体大会上，议员们投票通过了一项要求“中共立即停止活体摘除良心犯、以及宗教信仰和少数族裔团体器官的行为”的紧急议案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年03月26日 9:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/2/24/n4090414.md#1" target="_blank">以色列谴责中共活摘法轮功学员器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/2/24/n4090414.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1402231257312305-150x120.jpg" align ="left"></a>（大纪元以色列记者站报导）中共活摘法轮功学员器官的罪行曝光后，越来越广泛地受到国际社会的关注。在过去的一周里，以色列议会举办了特别活动，强烈谴责当今中国发生的这一令人发指的罪行。同时，当地各主流媒体相继报导了法轮功学员在中国受残酷迫害的遭遇，称“真善忍是世界上普世尊崇的价值观”，犹太人对于制止在中国发生的人权迫害有着道义上的责任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年02月23日 11:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/2/9/n4078745.md#1" target="_blank">芬兰社会聚焦中共活摘器官罪恶</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/2/9/n4078745.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1402090113232305-150x120.jpg" align ="left"></a>（大纪元记者时晓萍芬兰报导）2014年2月7日——继去年12月欧洲议会以绝对多数票通过要求“中共立即停止活体摘取良心犯、以及宗教信仰和少数族裔团体器官的行为” 的紧急议案后，欧洲议会代表处和芬兰法轮大法协会在芬兰首都赫尔辛基联合举办了该决议案的研讨会。这是决议案之后欧洲国家的第一个响应行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年02月09日 1:07 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/1/28/n4070896.md#1" target="_blank">【世事关心】生死之间2013版 (五)</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/1/28/n4070896.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/01/1401030752142147-150x120.jpg" align ="left"></a>中共活摘法轮功学员器官暴行敲响中共灭亡丧钟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年01月31日 9:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/1/11/n4056420.md#1" target="_blank">【细语人生】开心女孩依旧伤心（下）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/1/11/n4056420.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/01/140103091656100590-150x120.jpg" align ="left"></a>奶奶一手捧着儿媳妇的骨灰，一手抱着小开心回到了山东。小开心这个仅在人世间生活了一年多却历经百般磨难与沧桑的孩子，更是向世人诉说着这凄楚的冤情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年01月11日 7:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/1/1/n4048324.md#1" target="_blank">活摘器官真相震撼泰国游陆客 哭寻武大同窗</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/1/1/n4048324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/01/1401011152552320-150x120.jpg" align ="left"></a>“十三年了，冯薇你在哪里？”大陆游客徐女士向在泰国大皇宫前讲真相的法轮功学员哭诉。12月9日上午，前往泰国旅游的大陆游客徐女士了解了中共江泽民集团活摘法轮功学员器官的真相后，向法轮功学员哭求，希望帮助寻找十三年前武汉大学的同窗、法轮功学员冯薇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年01月01日 11:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/25/n4043002.md#1" target="_blank">意大利第二大报:中共活摘器官是恶魔行为</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/25/n4043002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/1312250941062436-150x120.jpg" align ="left"></a>（明慧网报导）近日来意大利电视台、报纸和广播电台等众多媒体持续谴责中共活摘器官罪行。二零一三年十二月二十三日，有着两百八十多万读者群的意大利第二大报共和国报（La Repubblica）在报导中共活摘法轮功学员器官的罪行时评论说，活体摘取器官是恶魔行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年12月25日 11:26 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/25/n4042299.md#1" target="_blank">【世事关心】生死之间2013版（四）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/25/n4042299.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/131013035646868-150x120.jpg" align ="left"></a>中共践踏人性的尊严将人类的良知推向了生死之间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年12月25日 6:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/21/n4039502.md#1" target="_blank">法议员望欧盟建立机制  制裁强摘器官者</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/21/n4039502.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/1312201543471963-150x120.jpg" align ="left"></a>（大纪元记者章乐法国报导）12月12日，欧洲议会通过一项紧急决议，要求“中共立即停止活体摘取良心犯以及宗教信仰和少数族裔团体器官的行为”， 要求“中共政权立即释放包括法轮功学员在内的所有良心犯”，决议呼吁“欧盟国家对中国的器官移植进行全面和透明的调查，并对参与这种不道德摘取器官者进行起诉”。法国国会议员布瓦耶女士（Valérie Boyer）认为此决议确认了.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年12月21日 4:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/17/n4035909.md#1" target="_blank">欧洲议会议员：活摘器官必须停止</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/17/n4035909.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/1312161501442133-150x120.jpg" align ="left"></a>（大纪元记者孙华比利时报导）欧洲议会刚刚通过一项紧急议案，呼吁中共立即停止从包括法轮功学员在内的良心犯身上摘取器官。此议案以绝对的多数票通过，来自欧洲各国的议员们纷纷表示支持此议案，来自德国的贝恩德?波塞特（Bernd Posselt）议员表示：“活摘器官必须立即停止。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年12月17日 3:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/15/n4034470.md#1" target="_blank">外媒：中共须停止活摘器官 以色列人向联合国陈情</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/15/n4034470.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/1312141209452003-150x120.jpg" align ="left"></a>（大纪元记者海宁综合报导）纽约新闻网站《犹太人之声》报导说，在以色列，3万多人签署了一份DAFOH起草的请愿书，向联合国人权理事会陈情，呼吁立即制止中共从被关押者身上强迫摘取器官的行为，包括以色列国会20多名政治理念各异的议员、城市议会议员以及曾以色列前总理内坦?沙兰斯基（Natan Sharansky）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年12月16日 12:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/11/n4031563.md#1" target="_blank">汪志远：中共比纳粹更邪恶  活摘器官犯下反人类罪</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/11/n4031563.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/1312102317342068-150x120.jpg" align ="left"></a>12月10日是世界人权日，大纽约地区的部分法轮功学员在联合国总部前广场召开新闻发布会，呼吁联合国制止中共活摘法轮功学员器官，关注发生在中国的针对法轮功群体的长达14年的人权迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年12月11日 12:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/29/n4022811.md#1" target="_blank">悉尼国际器官移植会 专家谴责中共强取或活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/29/n4022811.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/11/1311291652371002-150x120.jpg" align ="left"></a>2013年器官移植与获取学会第12届国际会议（ISODP）于2013年11月21日至24日在澳洲悉尼达令港的会议中心举行。来自全球42个国家的560位器官捐赠和移植专家参加了这次会议。国际医学界对中共活摘器官深感震惊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年11月30日 12:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/29/n4022733.md#1" target="_blank">惊闻活摘  英国卡迪夫大学学生征签请愿</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/29/n4022733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/11/1311290709351849-150x120.jpg" align ="left"></a>11月28日，英国威尔士国际大赦卡迪夫大学分部的学生，在卡迪夫大学校园内发起征签和向他们的议员写信行动，以此表达对中共活摘法轮功学员器官的强烈关注与谴责。两周前，卡迪夫大学的部分学生参加了“医生反对强摘器官”（DAFOH）在威尔士国民议会举行的“中共活摘器官说明会”，会上由大卫?乔高（David Kilgour）、知名作家伊森?葛特曼（Ethan Gutma.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年11月29日 7:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/25/n4019362.md#1" target="_blank">器官移植国际会议悉尼召开之际 曝光活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/25/n4019362.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/11/1311250939352124-150x120.jpg" align ="left"></a>（大纪元记者袁丽澳洲悉尼报导）2013年器官移植与获取学会第12届国际会议（ISODP）于2013年11月21日—2013年11月24日，在澳洲悉尼达令港的国际会议展览中心举办。随着中共“活体摘取器官”罪行在全球的曝光，在国际上，了解真相的医学界人士对中共的恶行表示极为的愤慨。一些参加会议的医生在悉尼市中心街头遇到讲真相的法轮功学员，他们纷纷在征签版上签名.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年11月25日 11:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/25/n4019397.md#1" target="_blank">【世事关心】生死之间2013版（三）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/25/n4019397.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/11/1311251016461461-150x120.jpg" align ="left"></a>2000-2005年在中国有4万1千5百例无法解释器官来源的移植手术，中共活体摘取法轮功学员器官的恶行，这种残暴的践踏人权的罪行，必须进一步被曝光并制止，并尽最大可能找到从事活摘器官的一个个罪犯，让他们接受正义的审判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年11月25日 11:11 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/12/n4176616.md#1" target="_blank">马里拉：这两件事足以让中共丧失继续对侵华日军所犯暴行予以谴责的资格</a><br></h3>马里拉：这两件事足以让中共丧失继续对侵华日军所犯暴行予以谴责的资格......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年06月12日 2:09 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/12/3/n4024991.md#1" target="_blank">瑞典大报批中国酷刑</a><br></h3>（大纪元记者孙林瑞典报导）瑞典《每日新闻》（Dagens Nyheter）是瑞典最大的日报，拥有大量读者。11月29日该报发表了一篇题为《中国的酷刑》的报导，对中国当前的人权状况提出了尖锐的批评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年12月03日 9:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/17/n1257210.md#1" target="_blank">苏家屯黑幕曝光 全球谴责吁调查</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/17/n1257210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603152106101509-150x120.jpg" align ="left"></a> 中共在苏家屯秘设纳粹式集中营，关押约六千名法轮功学员，在屠杀、剖取内脏器官牟取暴利后用焚尸炉灭迹，黑幕曝光后，引起了全球法轮功学员、以及一些民间组织、政府官员、正义民众以及海外媒体的强烈谴责，他们纷纷呼吁国际社会关注调查并尽快制止中共的残暴罪行。追查国际组织发出全面追查参与苏家屯集中营虐杀法轮功学员的嫌犯通告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月17日 5:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/15/n1254892.md#1" target="_blank">苏家屯内幕：建于地下 程序化操作</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/15/n1254892.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/60309184053789-150x120.jpg" align ="left"></a>“追查迫害法轮功国际组织”（追查国际）今日发布《关于苏家屯集中营活体摘取法轮功学员脏器的调查报告》，证实苏家屯区确实存在庞大的人体器官市场。集中营位于苏家屯某医院附近，整个设施设于地下，是在原人防工程和其它地下建筑的基础上改建利用的。因活体摘取器官过程过于残忍，参与的医务人员大多出现严重心理问题，并有自杀事件发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月15日 12:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/13/n1252518.md#1" target="_blank">沈阳集中营设焚尸炉 售法轮功学员器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/13/n1252518.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/603122249071030-150x120.jpg" align ="left"></a>(希望之声特约记者秦川采访，梁晓忆编辑) 中国是世界上人体器官最大的生产和贩卖国。中共从被关押者和死囚身上摘取人体器官，早已经是公开的秘密。最近据一名不愿透露姓名的知情者R先生透露，沈阳苏家屯有个关押法轮功学员的秘密集中营，那里不仅折磨法轮功学员，还非法摘取及出售他们的身体脏器，手段之恐怖骇人听闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月13日 11:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/10/n1249825.md#1" target="_blank">苏家屯集中营黑幕惊人 焚尸炉常冒白烟</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/10/n1249825.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/60309184053789-150x120.jpg" align ="left"></a>(大纪元记者季达采访综合报道)中国是国际器官买卖的最大交易地，劳改营成为经营死囚器官的公司。从东南亚、台湾、加拿大等地常有到中国大陆的换肾团。最近国际贩卖人体器官的地下公司和一些私人医院将焦点集中到中国沈阳苏家屯﹐苏家屯有一所类似集中营的劳教所﹐关押了约6千名从东北等地转移来的法轮功学员。一些医生集中在那里做器官摘除手术﹐营内设有焚尸炉﹐法轮功学员尸体在器官.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月10日 7:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/9/n1248687.md#1" target="_blank">沈阳集中营设焚尸炉 售法轮功学员器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/9/n1248687.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/03/60308200935815-150x120.jpg" align ="left"></a>最近﹐一位知情人士向本报披露了中国大陆一些鲜为人知﹑且骇人听闻的事实。为了保护该位知情人士的安全﹐我们在此隐去他的真实姓名﹐以R先生代称。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月09日 9:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/3/10/n1249798.md#1" target="_blank">沈阳司法局：有集中营又如何呢？</a><br></h3>（大纪元记者姜水云采访报道）当大纪元暴光沈阳苏家屯区有个纳粹式集中营后，记者立刻就打电话去沈阳市核实。沈阳市司法局的人说：“又如何呢？法轮功的又能怎么样呢！你们想怎么样！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年03月10日 6:18 AM							</td></tr>
