--- a/gb/nf5287_9.md
+++ b/gb/nf5287_9.md
@@ -89,3 +89,5 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/8/19/n3944067.md#1" target="_blank">皇甫容：签名反活摘 大家一起来</a><br></h3>目前，由“反强摘器官医生协会”（Doctors Against Forced Organ Harvesting，简称DAFOH）发起的全球联署征签行动正在全球各地进行。该联署呼吁联合国人权事务高级专员：要求中共立即停止活摘法轮功学员器官的罪行，并调查法办活摘器官的反人类罪犯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年08月19日 10:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/21/n3876233.md#1" target="_blank">黄洁夫为不道德获取器官辩护 -欲盖弥彰</a><br></h3>（大纪元记者何蔚综合报导）被撤职的前中国卫生部副部长黄洁夫日前在中国的一个新闻发布会上，为中国系统性获取死刑犯器官的制度辩护，说“我不反对用死刑犯的器官，如果他或她自愿表示捐赠，这就是他最后的愿望。”。但澳洲媒体澳广却以维吾尔族医生的经历表明，死刑犯在中弹未死之时便被活体摘除了器官。而澳洲医学教授辛格则表示，黄洁夫是中国不道德获取死刑犯器官体系的责任人，是不.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年05月21日 10:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/13/5/9/n3866098.md#1" target="_blank">澳专家：澳洲应率先制止非法移植旅游</a><br></h3>（大纪元记者何蔚澳洲悉尼报导）5月8日，澳纽器官移植学会主席，世界骨髓捐献者协会前任会长和器官移植全球联盟主席杰里米?查普曼（Jeremy Chapman）教授应澳洲绿党纽省上议员大卫?胥布瑞杰（David Shoebrisge）的邀请，就澳洲应有效制止‘旅游器官移植’问题在省议会做了演讲。他认为澳洲有责任维护文明社会的准则，在制止非法移植旅游上应起领先作用.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2013年05月09日 8:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nf5287_10.md#1">下一页</a></h3></td></tr>
+</table><p>原文地址： <a href="http://www.epochtimes.com/gb/nf5287_9.htm">http://www.epochtimes.com/gb/nf5287_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
