--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -16,8 +16,12 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank">韩国瑜质疑台独 赖清德：其实你不懂我们的心</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/412967-150x120.jpg" align ="left"></a>高雄市长韩国瑜今（18）日质疑赖清德的台独立场，赖清德回应“其实你不懂我们的心”今天晚间并在脸书回应，台湾已经是个主权独立的国家，名字叫中华民国，与中国互不隶属，执政后不必另外宣布台湾独立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/17/n11661439.md#1" target="_blank">坐飞机偶遇汤唯 网友晒照引发热议</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/17/n11661439.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/1-362-150x120.jpg" align ="left"></a>16日，有网友在微博晒出机场偶遇汤唯的照片。照片中，乘坐经济舱的汤唯，在登机前与普通乘客一样，除了站在那里排队安检，还独自一人提行李，可能因为行李太多太重，以至于汗水都沁透了衣服，网友不禁大赞她“活得非常真实”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank">中国最大掩埋场提前25年填满 焚垃圾毁生态</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG11496599839-150x120.jpg" align ="left"></a>陕西省西安市的全国最大垃圾掩埋场原设计要撑到2044年，但由于每天1万吨垃圾的涌入，已提前25年被塞满。现大举兴建焚化炉， 但垃圾焚烧会断送中国生态的未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 2:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/15/n11659394.md#1" target="_blank">【名家专栏】导弹防御是美安全新基石（上）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/15/n11659394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1261QN-150x120.jpg" align ="left"></a>本文将探讨两个非常重要的问题。首先，能否在削减核武器的同时部署导弹防御系统？ 其次，有限的导弹防御系统能否可靠地抵御核导弹威胁？ 我对这两个问题的回答都是“能！”但同时，也有一个很重要的警告：如果俄罗斯和中共都把有限导弹打击威胁作为自己的战略，那么美国的导弹防御系统需要继续得到改进，就能够可靠地抵御这种威胁。此外，其它的很主要的威胁也依然存在，为此，美国方面.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 8:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/16/n11659677.md#1" target="_blank">神韵2020全球巡演 首场纽约州12/20拉开帷幕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/16/n11659677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7c1262cfc3111d09241f51c5cd6944ac-150x120.jpg" align ="left"></a>神韵2020全球巡演的首场演出，将在今年12月20日在纽约州帕切斯市（Purchase）和加州伯克利（Berkeley）同时拉开帷幕。随后，将有同等规模大小的七个艺术团与艺术团乐团在全球同步演出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 12:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11678229.md#1" target="_blank">每日三退声明精选（2019/11/24）</a><br></h3>我几乎天天看大纪元、新唐人，使我更加看清了共产党的邪恶本质，并在力所能及条件下，揭露中共，弘扬自由、民主、法治的普世价值观，为中国民族的觉醒和未来，奋笔疾书，尽量感染身边的每一个人，家人、亲戚、朋友、同学，特别是今年以来的中美贸易战和香港民众反送中运动，为中国的未来，尽自己一份绵薄之力。在此，我庄严声明，退出中国共产党党籍，永不反悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11676572.md#1" target="_blank">每日三退声明精选（2019/11/23）</a><br></h3>打土豪分田地，害死那么多地主，是地主错了么？
+资本主义工商业改造，害死那么多资本家，是资本家错了么？
+反右斗争，害死那么多爱国人士，是爱国人士错了么？
+把归国华侨当特务，害死那么多，是爱国华侨错了么？
+三年大饥荒，饿死一亿多农民“官方统计是掩盖罪恶的数字”，仅重灾区的河南，安徽两省就饿死七千多万人，四川省饿死一千多万人。。。。。。是勤劳善良的农民错了.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 11:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/23/n11675439.md#1" target="_blank">每日三退声明精选（2019/11/22）</a><br></h3>不再被共党邪灵蒙蔽，共产党满口“伟光正、假大空”，所作所为却都是欺骗与迫害老百姓为害人类，天灭中共，没有共产党才有民主中国！才有每一个家庭的安全与幸福！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 10:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11673018.md#1" target="_blank">每日三退声明精选（2019/11/21）</a><br></h3>十年前我第一次开始了解中共统治真相后一直忍气吞声默默忍受着，但现在看到中共在新疆、在香港以及对宗教律师团体的残酷迫害，我无法允许自己在沉默下去，在此我声明退出参加加入的中共少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/21/n11670314.md#1" target="_blank">每日三退声明精选（2019/11/20）</a><br></h3>自共匪邪教建政一来一直被共匪思想洗脑，到现在才彻底看清红色暴政，看到大陆?层受尽压迫和财产剥夺，香港民主运动无人性的暴力血腥震压心里说不出什么滋味，一个卖国的邪党还天天叫人民爱党爱国变态至极，自己思想卖国引进马列思想，行为卖国送掉中国无数国土还残杀无数中国人民，真是人间魔鬼，早晚会下地狱，为了远离邪恶，我申请退出小时候不知加入的少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 10:44 AM							</td></tr>
